--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-29 [美日澳印外长谴责在南中国海的危险行动](/articles/voa/1013735.md)
+
 7-29 [碧桂园清盘呈请聆讯再度延期至明年1月](/articles/voa/1013736.md)
 
 7-29 [委内瑞拉总统选举落幕 马杜罗和反对派各自宣布胜选](/articles/voa/1013737.md)
@@ -598,6 +600,4 @@
 7-17 [前白宫国安官员被控担任韩国政府代理人](/articles/voa/1014033.md)
 
 7-17 [泰国警方称曼谷酒店六人死于氰化物毒杀，嫌疑人是死者之一](/articles/voa/1014034.md)
-
-7-17 [万斯主张美国外交由欧洲转向东亚 将在共和党大会上发表演说](/articles/voa/1014035.md)
 
