--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [那些原本是废话的常识｜为何世界最受欢迎运动项目对奥运很冷淡](/articles/cdt/338446.md)
+
 7-29 [每日一语 2024.7.28](/articles/cdt/338448.md)
 
 7-29 [冰川思享号｜一座城市18个高铁站，真为地方财政捏一把汗](/articles/cdt/338457.md)
@@ -598,6 +600,4 @@
 6-20 [【404文库】风慢慢｜“弹尽粮绝”组合，是当代慕容复与段延庆](/articles/cdt/339467.md)
 
 6-20 [天涯行路｜桂林洪水上热搜的时候，“正在退水”也上热搜了](/articles/cdt/339469.md)
-
-6-20 [古老板的老巢｜俄罗斯与朝鲜结盟，东北亚局势巨变](/articles/cdt/339471.md)
 
