--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-29 [法国内政部长：法国倾向于认为铁路破坏事件为极左翼极端分子所为](/articles/voa/1013733.md)
+
+7-29 [黎巴嫩严阵以待以色列报复之际 无人机攻击致黎巴嫩2死3伤](/articles/voa/1013734.md)
+
 7-29 [美日澳印外长谴责在南中国海的危险行动](/articles/voa/1013735.md)
 
 7-29 [碧桂园清盘呈请聆讯再度延期至明年1月](/articles/voa/1013736.md)
@@ -596,8 +600,4 @@
 7-17 [彭博：白宫拟采用最严厉的贸易措施阻止高端芯片流入中国](/articles/voa/1014031.md)
 
 7-17 [路透独家：中菲设立处理南中国海争端的新渠道](/articles/voa/1014032.md)
-
-7-17 [前白宫国安官员被控担任韩国政府代理人](/articles/voa/1014033.md)
-
-7-17 [泰国警方称曼谷酒店六人死于氰化物毒杀，嫌疑人是死者之一](/articles/voa/1014034.md)
 
