--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-29 [路透社：中国7月制造业活动连续第三个月萎缩](/articles/voa/1013731.md)
+
 7-29 [聿文视界：三中全会敲定2029年完成改革，暗示习近平必有第四任](/articles/voa/1013732.md)
 
 7-29 [法国内政部长：法国倾向于认为铁路破坏事件为极左翼极端分子所为](/articles/voa/1013733.md)
@@ -598,6 +600,4 @@
 7-17 [中俄在南中国海联合军演中进行实弹射击](/articles/voa/1014029.md)
 
 7-17 [北京报复美国对台新军售 宣布停止中美军控谈判](/articles/voa/1014030.md)
-
-7-17 [彭博：白宫拟采用最严厉的贸易措施阻止高端芯片流入中国](/articles/voa/1014031.md)
 
