--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-29 [码头水鬼｜“破处案”人大教授李炳海至今仍在逍遥法外，人大是西门庆大学？](/articles/cdt/338443.md)
+
 7-29 [风灵｜为什么没有人愿意主办奥运会了？](/articles/cdt/338444.md)
 
 7-29 [那些原本是废话的常识｜为何世界最受欢迎运动项目对奥运很冷淡](/articles/cdt/338446.md)
@@ -598,6 +600,4 @@
 6-22 [欧钦平｜律师和记者，为什么这两个职业越来越难](/articles/cdt/339461.md)
 
 6-22 [知识分子｜中文互联网内容真的正在衰退吗？](/articles/cdt/339462.md)
-
-6-20 [【404文库】风慢慢｜“弹尽粮绝”组合，是当代慕容复与段延庆](/articles/cdt/339467.md)
 
