--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-29 [路透：全球经济韧性加强，与降息预期逆势而动](/articles/voa/1013727.md)
+
 7-29 [日中外长会面，专家:中国一味要求日本单方面改变难有成果](/articles/voa/1013728.md)
 
 7-29 [全球多国政府呼吁委内瑞拉大选计票要透明](/articles/voa/1013729.md)
@@ -598,6 +600,4 @@
 7-18 [香港新任记协主席被《华尔街日报》解雇](/articles/voa/1014025.md)
 
 7-18 [两名美国资深参议员联名致信拜登，要求白宫明确美国对菲律宾的安全承诺](/articles/voa/1014026.md)
-
-7-18 [帕劳总统指控中国升高施压力道 分析：北京剑指台湾和美国](/articles/voa/1014027.md)
 
