--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-30 [国会通过法案，要求联邦政府必须采购完全在美国制造的美国国旗](/articles/voa/1013722.md)
+
 7-30 [印度考虑放宽对华投资限制以提高出口水平引起激烈争论](/articles/voa/1013723.md)
 
 7-30 [意大利总理梅洛尼会晤习近平，呼吁建立平衡的欧中关系](/articles/voa/1013724.md)
@@ -598,6 +600,4 @@
 7-18 [日本召开太平洋岛国峰会 力阻中国扩张与气候变迁](/articles/voa/1014020.md)
 
 7-18 [七国集团贸易部长就解决不公平贸易问题加强谈判](/articles/voa/1014021.md)
-
-7-18 [G7贸易部长会议: 应对中国产能过剩和贸易扭曲](/articles/voa/1014022.md)
 
