--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+7-30 [“中华台北”表述两头受拒，台湾奥运代表团正式名称再受关注](/articles/voa/1013715.md)
+
+7-30 [巴基斯坦军方：瓜达尔抗议者打死一名军人，打伤16名军人](/articles/voa/1013716.md)
+
+7-30 [拜登公布最高法院改革计划，称公众信心下降而美国面临“破坏”](/articles/voa/1013717.md)
+
 7-30 [不只是开幕式，巴黎奥运争议多……](/articles/voa/1013718.md)
 
 7-30 [英最大中国研究所面临起诉: 拒绝透露与中国有关的资金用途](/articles/voa/1013719.md)
@@ -594,10 +600,4 @@
 7-18 [乌克兰报告说有50万俄军包围乌克兰](/articles/voa/1014013.md)
 
 7-18 [世贸组织：中国对其工业部门的支持缺乏透明度](/articles/voa/1014014.md)
-
-7-18 [活动人士敦促英国政府阻止“希音”在伦敦首次公开募股](/articles/voa/1014015.md)
-
-7-18 [美国担心伊斯兰国在叙利亚和伊拉克复活](/articles/voa/1014016.md)
-
-7-18 [台驻美代表处回应特朗普称台湾应向美支付防务费用言论：台湾有决心承担自卫责任](/articles/voa/1014017.md)
 
