--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-30 [贺锦丽的“秘密武器”：笑](/articles/nyt/1042533.md)
+
 7-29 [关于特朗普、拜登和贺锦丽健康状况的14个问题](/articles/nyt/1042534.md)
 
 7-29 [贺锦丽为何很少被视为“亚裔美国人”](/articles/nyt/1042535.md)
@@ -598,6 +600,4 @@
 4-24 [“穷人的幸福之家”：为何上海年轻人开始流行吃食堂](/articles/nyt/1042831.md)
 
 4-24 [习近平会成为解决气候变化的救世主吗](/articles/nyt/1042832.md)
-
-4-23 [特朗普与梅拉尼娅婚姻的不解之谜](/articles/nyt/1042833.md)
 
