--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-30 [美国主要对手正在磨练“不露马脚”地影响美国选举的能力](/articles/voa/1013709.md)
+
 7-30 [警方：英格兰一舞蹈班上发生持刀袭击事件，两名儿童遇难，11人受伤](/articles/voa/1013710.md)
 
 7-30 [王书君案审判开始,被告涉嫌为中国政府在美国监视反共活动人士](/articles/voa/1013711.md)
@@ -598,6 +600,4 @@
 7-18 [特朗普竞选搭档万斯发表提名演说 誓言捍卫工人阶级利益](/articles/voa/1014007.md)
 
 7-18 [美媒：舒默和佩洛西加大对拜登退选的压力](/articles/voa/1014008.md)
-
-7-18 [拜登确诊新冠后取消内华达州竞选活动](/articles/voa/1014009.md)
 
