--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-30 [日元“难以承受之低”：日本军费怎么办？](/articles/nyt/1042532.md)
+
 7-30 [贺锦丽的“秘密武器”：笑](/articles/nyt/1042533.md)
 
 7-29 [关于特朗普、拜登和贺锦丽健康状况的14个问题](/articles/nyt/1042534.md)
@@ -598,6 +600,4 @@
 4-24 [欧洲议会德国议员助理被捕，涉嫌为中国从事间谍活动](/articles/nyt/1042830.md)
 
 4-24 [“穷人的幸福之家”：为何上海年轻人开始流行吃食堂](/articles/nyt/1042831.md)
-
-4-24 [习近平会成为解决气候变化的救世主吗](/articles/nyt/1042832.md)
 
