--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-30 [【404文库】劳东燕｜“网号网证”是给每个网民安上的监视器](/articles/cdt/338424.md)
+
 7-30 [每日一语 2024.7.29](/articles/cdt/338426.md)
 
 7-29 [星球商业评论｜小马和他们不一样](/articles/cdt/338430.md)
@@ -598,6 +600,4 @@
 6-22 [正面连接｜一个外卖员59次丢失了他的尊严](/articles/cdt/339455.md)
 
 6-22 [独角鲸工作坊｜质疑姜萍作弊的猎巫闹剧，该结束了！](/articles/cdt/339456.md)
-
-6-22 [城市的地得｜“数学天才姜萍”如果在美国会怎样](/articles/cdt/339457.md)
 
