--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-30 [从精英律师到“第二夫人”候选：万斯印度裔妻子引关注](/articles/nyt/1042530.md)
+
 7-30 [日本追求的通胀率升高实现了，经济为何却未变好](/articles/nyt/1042531.md)
 
 7-30 [日元“难以承受之低”：日本军费怎么办？](/articles/nyt/1042532.md)
@@ -598,6 +600,4 @@
 4-24 [抗议、占领和逮捕：哥伦比亚大学学生抗议风波如何升级](/articles/nyt/1042828.md)
 
 4-24 [工厂废弃、产能过剩：中国汽车工业转型面临考验](/articles/nyt/1042829.md)
-
-4-24 [欧洲议会德国议员助理被捕，涉嫌为中国从事间谍活动](/articles/nyt/1042830.md)
 
