--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-30 [中共政治局会议 承诺刺激政策将侧重消费者](/articles/voa/1013704.md)
+
 7-30 [台湾与中国就“0214金门事件”达成协议 争议事件落幕](/articles/voa/1013705.md)
 
 7-30 [印度南部暴雨导致 大规模山体滑坡酿至少49死](/articles/voa/1013706.md)
@@ -598,6 +600,4 @@
 7-18 [越南向联合国提交南中国海外大陆架延伸申请，中国“坚决反对”](/articles/voa/1014002.md)
 
 7-18 [三中全会人事 免去秦刚中央委员职务、确认李尚福等人遭开除党籍](/articles/voa/1014003.md)
-
-7-18 [特朗普支付防务费用言论后，台湾称致力于加强国防](/articles/voa/1014004.md)
 
