--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-30 [美国向菲律宾提供5亿美元军援](/articles/dw/1024740.md)
+
 7-30 [德系电动车完胜中国品牌 实事求是?](/articles/dw/1024741.md)
 
 7-30 [普京警告美在德部署导弹 德国政府硬气回应](/articles/dw/1024742.md)
@@ -598,6 +600,4 @@
 7-1 [要免费球衣还是花100欧元？被“搭便车”营销的2024欧洲杯](/articles/dw/1025038.md)
 
 7-1 [奥尔班宣布在欧洲议会组建“欧洲爱国者”新联盟  右翼版图重组](/articles/dw/1025039.md)
-
-7-1 [“让欧洲再次伟大”:匈牙利接任欧盟轮值主席国](/articles/dw/1025040.md)
 
