--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-30 [台湾总统赖清德警告中国“威胁”推动国防自主](/articles/voa/1013703.md)
+
 7-30 [中共政治局会议 承诺刺激政策将侧重消费者](/articles/voa/1013704.md)
 
 7-30 [台湾与中国就“0214金门事件”达成协议 争议事件落幕](/articles/voa/1013705.md)
@@ -598,6 +600,4 @@
 7-18 [欧盟委员会主席冯德莱恩连任成功，“抗中保台”列入她下一任政纲](/articles/voa/1014001.md)
 
 7-18 [越南向联合国提交南中国海外大陆架延伸申请，中国“坚决反对”](/articles/voa/1014002.md)
-
-7-18 [三中全会人事 免去秦刚中央委员职务、确认李尚福等人遭开除党籍](/articles/voa/1014003.md)
 
