--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-30 [近距离2｜借胡锡进被“进盐”的机会，和他聊一聊“道德”问题](/articles/cdt/338418.md)
+
+7-30 [剑客写字的地方｜“网号”“网证”来了，一点个人看法](/articles/cdt/338421.md)
+
 7-30 [【404文库】劳东燕｜“网号网证”是给每个网民安上的监视器](/articles/cdt/338424.md)
 
 7-30 [每日一语 2024.7.29](/articles/cdt/338426.md)
@@ -596,8 +600,4 @@
 6-22 [【404文库】just law｜红星新闻刊发监督报道后，疑有警方“马甲号”对记者“网暴”泼脏水](/articles/cdt/339440.md)
 
 6-22 [每日一语 2024.6.20](/articles/cdt/339451.md)
-
-6-22 [正面连接｜一个外卖员59次丢失了他的尊严](/articles/cdt/339455.md)
-
-6-22 [独角鲸工作坊｜质疑姜萍作弊的猎巫闹剧，该结束了！](/articles/cdt/339456.md)
 
