--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-30 [德语媒体: 中国何时管教其殖民地俄罗斯?](/articles/dw/1024738.md)
+
 7-30 [乌克兰向中国外长发出访乌邀请](/articles/dw/1024739.md)
 
 7-30 [美国向菲律宾提供5亿美元军援](/articles/dw/1024740.md)
@@ -598,6 +600,4 @@
 7-1 [美日韩“自由之刃”军演后 朝鲜再试射两枚弹道导弹](/articles/dw/1025036.md)
 
 7-1 [蘇州日本人遇襲案：仇日情緒升溫 官方整治](/articles/dw/1025037.md)
-
-7-1 [要免费球衣还是花100欧元？被“搭便车”营销的2024欧洲杯](/articles/dw/1025038.md)
 
