--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -35,6 +35,8 @@
 
 7-29 [冰川思享号｜巴黎奥运会，一场冒犯所有人的盛会](/articles/cdt/338465.md)
 
+7-31 [【网络民议】中信建投实习生少爷的一天](/articles/cdt/338475.md)
+
 7-29 [【敏感词库】退休时间、央视解说沉默了](/articles/cdt/338477.md)
 
 7-29 [【网络民议】“央视解说沉默了，直播这事不适合央视，不能完全把控局面”](/articles/cdt/338489.md)
@@ -598,6 +600,4 @@
 6-22 [竹不倒｜完了完了，谎言太多记不清，自己打自己了？](/articles/cdt/339437.md)
 
 6-22 [【404文库】just law｜红星新闻刊发监督报道后，疑有警方“马甲号”对记者“网暴”泼脏水](/articles/cdt/339440.md)
-
-6-22 [每日一语 2024.6.20](/articles/cdt/339451.md)
 
