--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-31 [世界媒体看中国: 与意大利的特殊关系](/articles/voa/1013695.md)
+
 7-31 [香港股市退潮涌动 无利可图唯有撤出](/articles/voa/1013696.md)
 
 7-31 [中国运动员药检阳性旧案新披露案情令巴黎奥运游泳比赛笼罩在阴霾中](/articles/voa/1013697.md)
@@ -598,6 +600,4 @@
 7-19 [10月7日袭击事件报告记录了哈马斯的战争罪行](/articles/voa/1013993.md)
 
 7-19 [内蒙古那达慕沦为中共庙会，“红歌”和“秧歌”成为主旋律](/articles/voa/1013994.md)
-
-7-19 [欧洲领导人在英国举行峰会，呼吁与乌克兰团结在一起](/articles/voa/1013995.md)
 
