--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-31 [【CDTV】湖南新化县一座天桥上再度出现“四通桥标语”](/articles/cdt/338416.md)
+
 7-30 [近距离2｜借胡锡进被“进盐”的机会，和他聊一聊“道德”问题](/articles/cdt/338418.md)
 
 7-30 [剑客写字的地方｜“网号”“网证”来了，一点个人看法](/articles/cdt/338421.md)
@@ -598,6 +600,4 @@
 6-22 [天涯行路｜说说18万公益款，只捐了1.9万的事](/articles/cdt/339434.md)
 
 6-22 [竹不倒｜完了完了，谎言太多记不清，自己打自己了？](/articles/cdt/339437.md)
-
-6-22 [【404文库】just law｜红星新闻刊发监督报道后，疑有警方“马甲号”对记者“网暴”泼脏水](/articles/cdt/339440.md)
 
