--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+7-31 [美国副国务卿：美国必须采取更多措施来对抗中国的行动](/articles/voa/1013691.md)
+
+7-31 [中国网民借委内瑞拉街头抗议委婉批评北京政治体制](/articles/voa/1013692.md)
+
+7-31 [马杜罗在委内瑞拉国内外质疑与抗议声中宣布胜选，习近平祝贺其连任](/articles/voa/1013693.md)
+
+7-31 [默克公司加德西疫苗在中国的销售担忧让默克股票暴跌](/articles/voa/1013694.md)
+
 7-31 [世界媒体看中国: 与意大利的特殊关系](/articles/voa/1013695.md)
 
 7-31 [香港股市退潮涌动 无利可图唯有撤出](/articles/voa/1013696.md)
@@ -592,12 +600,4 @@
 7-19 [维吾尔流亡组织藉受奴役民族周呼吁美国承认“东突厥斯坦”独立](/articles/voa/1013989.md)
 
 7-19 [太平洋七月练兵忙: 欧洲大批战机飞抵日本，展开天空24军演](/articles/voa/1013990.md)
-
-7-19 [推特上的中国：中共宣布“秦刚同志”辞去党内职务，前外长安全着陆？](/articles/voa/1013991.md)
-
-7-19 [美国新制裁针对也门胡塞金融网络相关的十几名个人，其中包括一名中国公民](/articles/voa/1013992.md)
-
-7-19 [10月7日袭击事件报告记录了哈马斯的战争罪行](/articles/voa/1013993.md)
-
-7-19 [内蒙古那达慕沦为中共庙会，“红歌”和“秧歌”成为主旋律](/articles/voa/1013994.md)
 
