--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-31 [中国电动汽车“出海”如何重塑一个国家的汽车产业](/articles/nyt/1042528.md)
+
 7-30 [万斯何以飞速“上位”？靠硅谷“大佬”](/articles/nyt/1042529.md)
 
 7-30 [从精英律师到“第二夫人”候选：万斯印度裔妻子引关注](/articles/nyt/1042530.md)
@@ -598,6 +600,4 @@
 4-25 [关于美国对外援助法案，你应该知道的](/articles/nyt/1042826.md)
 
 4-25 [中美关系再掀波澜，布林肯访华面临考验](/articles/nyt/1042827.md)
-
-4-24 [抗议、占领和逮捕：哥伦比亚大学学生抗议风波如何升级](/articles/nyt/1042828.md)
 
