--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+7-31 [哈马斯领导人哈尼耶在伊朗遇袭身亡](/articles/nyt/1042526.md)
+
+7-31 [日本车风光不在？中日车企“鏖战”泰国市场](/articles/nyt/1042527.md)
+
 7-31 [中国电动汽车“出海”如何重塑一个国家的汽车产业](/articles/nyt/1042528.md)
 
 7-30 [万斯何以飞速“上位”？靠硅谷“大佬”](/articles/nyt/1042529.md)
@@ -596,8 +600,4 @@
 4-25 [揭秘TikTok法案通过背后的“迅雷突击”](/articles/nyt/1042824.md)
 
 4-25 [拜登签署针对TikTok法案，接下来会发生什么](/articles/nyt/1042825.md)
-
-4-25 [关于美国对外援助法案，你应该知道的](/articles/nyt/1042826.md)
-
-4-25 [中美关系再掀波澜，布林肯访华面临考验](/articles/nyt/1042827.md)
 
