--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-31 [中菲南海争端加剧之际，美国向菲律宾提供5亿美元军援](/articles/nyt/1042525.md)
+
 7-31 [哈马斯领导人哈尼耶在伊朗遇袭身亡](/articles/nyt/1042526.md)
 
 7-31 [日本车风光不在？中日车企“鏖战”泰国市场](/articles/nyt/1042527.md)
@@ -598,6 +600,4 @@
 4-25 [亚洲正在上演的一场危险游戏](/articles/nyt/1042823.md)
 
 4-25 [揭秘TikTok法案通过背后的“迅雷突击”](/articles/nyt/1042824.md)
-
-4-25 [拜登签署针对TikTok法案，接下来会发生什么](/articles/nyt/1042825.md)
 
