--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-31 [哈里斯将于下周二在费城与她的副总统搭档同台举行竞选集会](/articles/voa/1013677.md)
+
+7-31 [哈马斯领导人哈尼亚在伊朗遇袭身亡](/articles/voa/1013678.md)
+
 7-31 [中国7月份制造业活动连续第三个月萎缩](/articles/voa/1013679.md)
 
 7-31 [以色列称在贝鲁特袭击中杀死真主党高级指挥官](/articles/voa/1013680.md)
@@ -596,8 +600,4 @@
 7-19 [台湾新外长林佳龙：台湾国防必须“靠自己”](/articles/voa/1013975.md)
 
 7-19 [越南共产党总书记阮富仲去世，享年80岁](/articles/voa/1013976.md)
-
-7-19 [微软系统大范围技术故障扰乱全球航班、银行、媒体机构和企业的运营](/articles/voa/1013977.md)
-
-7-19 [面对民主党人劝退声浪 拜登的连任竞选来到关键时刻](/articles/voa/1013978.md)
 
