--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-31 [奥斯汀称中东战争并非不可避免 寻求“降温”缓和局势](/articles/voa/1013676.md)
+
 7-31 [哈里斯将于下周二在费城与她的副总统搭档同台举行竞选集会](/articles/voa/1013677.md)
 
 7-31 [哈马斯领导人哈尼亚在伊朗遇袭身亡](/articles/voa/1013678.md)
@@ -598,6 +600,4 @@
 7-19 [台湾民调：台湾居民认为中国威胁持续增长](/articles/voa/1013974.md)
 
 7-19 [台湾新外长林佳龙：台湾国防必须“靠自己”](/articles/voa/1013975.md)
-
-7-19 [越南共产党总书记阮富仲去世，享年80岁](/articles/voa/1013976.md)
 
