--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-31 [哈马斯称其政治领导人哈尼亚遇袭身亡 北京谴责](/articles/dw/1024731.md)
+
+7-31 [英国：持刀袭击案疑凶身份“传言”引发警民冲突](/articles/dw/1024732.md)
+
+7-31 [在乌克兰战争期间举办的音乐节](/articles/dw/1024733.md)
+
+7-31 [白俄总统卢卡申科赦免被判死刑的德国人](/articles/dw/1024734.md)
+
 7-31 [巴黎奧運：頻繁藥檢導致中國泳隊成績不佳？](/articles/dw/1024735.md)
 
 7-31 [德国泳坛亲兄弟 勇闯巴黎追梦想](/articles/dw/1024736.md)
@@ -592,12 +600,4 @@
 7-1 [意大利查获六吨中国“毒品前体”](/articles/dw/1025029.md)
 
 7-1 [忧中美贸易战 中国7月大豆进口将攀新高](/articles/dw/1025030.md)
-
-7-1 [欲拒还迎 美国人为何对电动汽车如此纠结](/articles/dw/1025031.md)
-
-7-1 [欧洲杯中文广告彰显谁才是“财神爷”？](/articles/dw/1025032.md)
-
-7-1 [德国今年武器出口有望再创下新纪录](/articles/dw/1025033.md)
-
-7-1 [泽连斯基再次呼吁盟友放宽乌克兰使用重型武器的范围](/articles/dw/1025034.md)
 
