--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+7-31 [天下无鬼｜冥府的监控体系是怎样建成的？](/articles/cdt/338390.md)
+
+7-31 [猛犸工作室｜被传销的县城老人：逃不开人情，躲不过套路](/articles/cdt/338392.md)
+
 7-31 [【旧文重温】胡文辉｜历史的垃圾时间，文化的悠长假期](/articles/cdt/338396.md)
 
 7-31 [每日一语 2024.7.30](/articles/cdt/338398.md)
@@ -596,8 +600,4 @@
 6-22 [陈惟杉｜普华永道，引火烧身](/articles/cdt/339416.md)
 
 6-22 [【立此存照】惩治“台独”量刑标准公布，最高至死刑](/articles/cdt/339419.md)
-
-6-22 [刘晓博｜主要省市，“体制内强度”指数](/articles/cdt/339421.md)
-
-6-22 [每日一语 2024.6.21](/articles/cdt/339424.md)
 
