--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-31 [委内瑞拉民众抗议马杜罗操纵选举结果 11人丧生](/articles/dw/1024730.md)
+
 7-31 [哈马斯称其政治领导人哈尼亚遇袭身亡 北京谴责](/articles/dw/1024731.md)
 
 7-31 [英国：持刀袭击案疑凶身份“传言”引发警民冲突](/articles/dw/1024732.md)
@@ -598,6 +600,4 @@
 7-2 [中方駁美限制對華投資先進技術：無助AI發展](/articles/dw/1025028.md)
 
 7-1 [意大利查获六吨中国“毒品前体”](/articles/dw/1025029.md)
-
-7-1 [忧中美贸易战 中国7月大豆进口将攀新高](/articles/dw/1025030.md)
 
