--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-31 [北京不满美日2+2会议，外交部向日方“消极言行”提出抗议和交涉](/articles/voa/1013674.md)
+
 7-31 [路透：美国拟下月就外国芯片设备对华出口出台新规](/articles/voa/1013675.md)
 
 7-31 [奥斯汀称中东战争并非不可避免 寻求“降温”缓和局势](/articles/voa/1013676.md)
@@ -598,6 +600,4 @@
 7-19 [台湾外长林佳龙：国防预算八年倍增，台湾已付该付的军费](/articles/voa/1013972.md)
 
 7-19 [特朗普的威慑能吓阻中国武力犯台吗？](/articles/voa/1013973.md)
-
-7-19 [台湾民调：台湾居民认为中国威胁持续增长](/articles/voa/1013974.md)
 
