--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-1 [抓住证据，德国罕见召见中国驻德大使，抗议中国网攻德国政府机构](/articles/voa/1013667.md)
+
+8-1 [中国湖南又现四通桥标语，矛头直指中共党魁习近平](/articles/voa/1013668.md)
+
+8-1 [印中经贸关系升温，但边界局势紧张未见缓和](/articles/voa/1013669.md)
+
 7-31 [驻日美军指挥结构升级 专家:有效威慑中共侵台](/articles/voa/1013670.md)
 
 7-31 [哈尼亚被斩首后，美中和中东各方纷纷表态，布林肯呼吁推动加沙停火](/articles/voa/1013671.md)
@@ -594,10 +600,4 @@
 7-20 [失业激增导致中国极端事件频发 蓝领、白领、金领齐受害](/articles/voa/1013965.md)
 
 7-20 [如果拜登退出总统竞选会发生什么？](/articles/voa/1013966.md)
-
-7-20 [香港政治犯小牢转大牢 狱后继续饱受精神压力](/articles/voa/1013967.md)
-
-7-20 [西方专家解读中共三中全会：公报平淡无奇 改革方向已变](/articles/voa/1013968.md)
-
-7-20 [中共三中全会后再信心喊话 分析: 改革宣言与现实充满矛盾](/articles/voa/1013969.md)
 
