--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-1 [【CDT月度视频】七月之声（2024）——向《四月之声》致敬](/articles/cdt/338387.md)
+
 7-31 [天下无鬼｜冥府的监控体系是怎样建成的？](/articles/cdt/338390.md)
 
 7-31 [猛犸工作室｜被传销的县城老人：逃不开人情，躲不过套路](/articles/cdt/338392.md)
@@ -598,6 +600,4 @@
 6-23 [木白文笔平平｜从妇女发展基金会的这则善款公告说起](/articles/cdt/339414.md)
 
 6-22 [陈惟杉｜普华永道，引火烧身](/articles/cdt/339416.md)
-
-6-22 [【立此存照】惩治“台独”量刑标准公布，最高至死刑](/articles/cdt/339419.md)
 
