--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-1 [联合国报告指责以色列秘密拘留和虐待数千名巴勒斯坦人](/articles/voa/1013662.md)
+
+8-1 [美国加强印太联盟](/articles/voa/1013663.md)
+
 8-1 [哈马斯领导人遇刺让伊朗伊斯兰统治者的波斯反对者发贴庆祝](/articles/voa/1013664.md)
 
 8-1 [中国网民以及多家搜索网站悼念遇袭身亡的哈马斯领导人哈尼亚](/articles/voa/1013665.md)
@@ -596,8 +600,4 @@
 7-20 [可能取代拜登竞选总统的民主党人](/articles/voa/1013960.md)
 
 7-20 [回应特朗普称台湾应支付防卫费用 美共和党人：行动比言辞更重要](/articles/voa/1013961.md)
-
-7-20 [民主党担心选民对拜登的疑虑会导致国会选举失利](/articles/voa/1013962.md)
-
-7-20 [布林肯将于下周会见王毅，试图澄清南中国海和台湾议题上的分歧](/articles/voa/1013963.md)
 
