--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-1 [美国扣留对格鲁吉亚政府9500万美元的援助](/articles/voa/1013661.md)
+
 8-1 [联合国报告指责以色列秘密拘留和虐待数千名巴勒斯坦人](/articles/voa/1013662.md)
 
 8-1 [美国加强印太联盟](/articles/voa/1013663.md)
@@ -598,6 +600,4 @@
 7-20 [特朗普表示与乌克兰总统进行了“非常好的通话”并承诺结束战争](/articles/voa/1013959.md)
 
 7-20 [可能取代拜登竞选总统的民主党人](/articles/voa/1013960.md)
-
-7-20 [回应特朗普称台湾应支付防卫费用 美共和党人：行动比言辞更重要](/articles/voa/1013961.md)
 
