--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+8-1 [乌克兰接收第一批F-16战斗机](/articles/voa/1013655.md)
+
+8-1 [美参议员跨党推出《与台湾站在一起法案》，以全面经济制裁遏阻中国侵台](/articles/voa/1013656.md)
+
+8-1 [盟友施压，委内瑞拉的马杜罗要求最高法院审计总统选举](/articles/voa/1013657.md)
+
+8-1 [一名美国退伍军人因参与委内瑞拉未遂政变在纽约被逮捕](/articles/voa/1013658.md)
+
+8-1 [美财政部制裁协助胡塞武装采购武器的网络，包括设在中国的公司](/articles/voa/1013659.md)
+
+8-1 [中国将取消特定消费级无人机的临时出口管制](/articles/voa/1013660.md)
+
 8-1 [美国扣留对格鲁吉亚政府9500万美元的援助](/articles/voa/1013661.md)
 
 8-1 [联合国报告指责以色列秘密拘留和虐待数千名巴勒斯坦人](/articles/voa/1013662.md)
@@ -588,16 +600,4 @@
 7-20 [三中全会后中共的两岸政策走向 专家: 加强倡导对台主权](/articles/voa/1013953.md)
 
 7-20 [菲律宾将购买更多战斗机，正加强飞行员培训](/articles/voa/1013954.md)
-
-7-20 [中国陕西暴雨导致高速桥梁坍塌 已酿12死](/articles/voa/1013955.md)
-
-7-20 [日本政府证实和台湾海巡船联合演习 中国向日方提出交涉](/articles/voa/1013956.md)
-
-7-20 [中国与加拿大外长会面 王毅：中加应致力于发展战略伙伴关系](/articles/voa/1013957.md)
-
-7-20 [抗议扩大 孟加拉国实施宵禁并部署军队](/articles/voa/1013958.md)
-
-7-20 [特朗普表示与乌克兰总统进行了“非常好的通话”并承诺结束战争](/articles/voa/1013959.md)
-
-7-20 [可能取代拜登竞选总统的民主党人](/articles/voa/1013960.md)
 
