--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-1 [中国新任“战狼”大使赴柬埔寨,超级大国竞争拉开帷幕](/articles/voa/1013654.md)
+
 8-1 [乌克兰接收第一批F-16战斗机](/articles/voa/1013655.md)
 
 8-1 [美参议员跨党推出《与台湾站在一起法案》，以全面经济制裁遏阻中国侵台](/articles/voa/1013656.md)
@@ -598,6 +600,4 @@
 7-20 [中俄海上联合巡航首次来到南中国海 俄被迫蹚浑水？](/articles/voa/1013952.md)
 
 7-20 [三中全会后中共的两岸政策走向 专家: 加强倡导对台主权](/articles/voa/1013953.md)
-
-7-20 [菲律宾将购买更多战斗机，正加强飞行员培训](/articles/voa/1013954.md)
 
