--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-1 [中国拟推行“网络身份证”，保护隐私还是加强监控？](/articles/nyt/1042520.md)
+
 8-1 [外国网红游客，中国宣传机构的“互联网嘴替”？](/articles/nyt/1042521.md)
 
 8-1 [外国人到中国旅游是一种什么样的体验](/articles/nyt/1042522.md)
@@ -598,6 +600,4 @@
 4-26 [纽约州最高法院推翻韦恩斯坦性犯罪裁决，这里是五个要点](/articles/nyt/1042818.md)
 
 4-26 [大疆无人机在美国广受欢迎，但被华盛顿视为国家安全威胁](/articles/nyt/1042819.md)
-
-4-26 [布林肯访华基调友好，但拜登强硬政策令中国不满](/articles/nyt/1042820.md)
 
