--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-1 [德國因網攻案召見中國大使 六四以來首例](/articles/dw/1024728.md)
+
+8-1 [藥檢疑雲延燒之際 潘展樂奪中國游泳首金](/articles/dw/1024729.md)
+
 7-31 [委内瑞拉民众抗议马杜罗操纵选举结果 11人丧生](/articles/dw/1024730.md)
 
 7-31 [哈马斯称其政治领导人哈尼亚遇袭身亡 北京谴责](/articles/dw/1024731.md)
@@ -596,8 +600,4 @@
 7-2 [朝鲜称成功试射新型导弹 韩国质疑](/articles/dw/1025026.md)
 
 7-2 [留學生抗議謝鋒遭拖出場 美議員質疑哈佛](/articles/dw/1025027.md)
-
-7-2 [中方駁美限制對華投資先進技術：無助AI發展](/articles/dw/1025028.md)
-
-7-1 [意大利查获六吨中国“毒品前体”](/articles/dw/1025029.md)
 
