--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-1 [加拿大军舰通过台湾海峡 中国指其“破坏和平稳定”](/articles/voa/1013653.md)
+
 8-1 [中国新任“战狼”大使赴柬埔寨,超级大国竞争拉开帷幕](/articles/voa/1013654.md)
 
 8-1 [乌克兰接收第一批F-16战斗机](/articles/voa/1013655.md)
@@ -598,6 +600,4 @@
 7-20 [战局艰难，白宫易主机率增加，强人泽连斯基对俄谈判立场似有松动](/articles/voa/1013951.md)
 
 7-20 [中俄海上联合巡航首次来到南中国海 俄被迫蹚浑水？](/articles/voa/1013952.md)
-
-7-20 [三中全会后中共的两岸政策走向 专家: 加强倡导对台主权](/articles/voa/1013953.md)
 
