--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-1 [真主党哈马斯领导人相继遇袭，中东会爆发更大规模战争吗](/articles/nyt/1042518.md)
+
 8-1 [中国不开一枪就能控制南海](/articles/nyt/1042519.md)
 
 8-1 [中国拟推行“网络身份证”，保护隐私还是加强监控？](/articles/nyt/1042520.md)
@@ -598,6 +600,4 @@
 4-27 [美食背后的外交玄机：美国政要来中国吃什么？怎么吃？](/articles/nyt/1042816.md)
 
 4-27 [布林肯与习近平会面：中美保持接触但难掩分歧](/articles/nyt/1042817.md)
-
-4-26 [纽约州最高法院推翻韦恩斯坦性犯罪裁决，这里是五个要点](/articles/nyt/1042818.md)
 
