--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-1 [PMI调查显示前景堪忧 中国制造业面临“残酷夏天”](/articles/voa/1013649.md)
+
 8-1 [中国以“干涉”其内政为由制裁美国众议员麦戈文](/articles/voa/1013650.md)
 
 8-1 [哈尼亚在伊朗被击毙令中东爆发全面区域战争风险骤增](/articles/voa/1013651.md)
@@ -598,6 +600,4 @@
 7-21 [加拿大调查“中共海外警察局”大有斩获，民众吁当局依新法惩治跨国镇压](/articles/voa/1013947.md)
 
 7-20 [沙利文：美国支持菲律宾为坐滩军舰运送补给，两国高级将领密切互动](/articles/voa/1013948.md)
-
-7-20 [报复还是姿态？俄罗斯宣布大幅上调“不友好国家”的产品进口关税](/articles/voa/1013949.md)
 
