--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-1 [中国撤销制裁美企卫讯 分析: 其远洋通讯服务无可替代](/articles/voa/1013647.md)
+
+8-1 [路透社：前朝鲜外交官称若特朗普再次当选，平壤或愿与美国重启核谈判](/articles/voa/1013648.md)
+
 8-1 [PMI调查显示前景堪忧 中国制造业面临“残酷夏天”](/articles/voa/1013649.md)
 
 8-1 [中国以“干涉”其内政为由制裁美国众议员麦戈文](/articles/voa/1013650.md)
@@ -596,8 +600,4 @@
 7-21 [乌克兰前议员在疑似刺杀中被打死 俄罗斯空袭打死两人](/articles/voa/1013945.md)
 
 7-21 [以军打击也门胡塞武装的几个目标，回应攻击](/articles/voa/1013946.md)
-
-7-21 [加拿大调查“中共海外警察局”大有斩获，民众吁当局依新法惩治跨国镇压](/articles/voa/1013947.md)
-
-7-20 [沙利文：美国支持菲律宾为坐滩军舰运送补给，两国高级将领密切互动](/articles/voa/1013948.md)
 
