--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-1 [新新默存｜温克坚：举债的艺术](/articles/cdt/338374.md)
+
+8-1 [每日一语 2024.7.31](/articles/cdt/338379.md)
+
 8-1 [【CDT月度视频】七月之声（2024）——向《四月之声》致敬](/articles/cdt/338387.md)
 
 8-1 [财联社｜微信淘宝小红书等App试点“网络身份证”](/articles/cdt/338388.md)
@@ -596,8 +600,4 @@
 6-22 [推动世界美好｜同样是贫困，美国与中国定义标准差异巨大：谈张维为如何偷梁换柱](/articles/cdt/339402.md)
 
 6-22 [【404文库】北京市档案馆｜近代北京的免费医疗](/articles/cdt/339404.md)
-
-6-23 [黑噪音｜朝鲜与俄罗斯结盟：一方遭入侵另一方必军援](/articles/cdt/339409.md)
-
-6-23 [木蹊说｜余秘书长的“外交豁免权”，应该发给姜萍](/articles/cdt/339411.md)
 
