--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 8-1 [【404文库】阿喀琉斯与龟｜我担心哪天我的上网证被吊销了](/articles/cdt/338375.md)
 
+8-1 [【敏感词库】网号网证要来了、网络身份证要来了](/articles/cdt/338376.md)
+
 8-1 [每日一语 2024.7.31](/articles/cdt/338379.md)
 
 8-1 [【CDT月度视频】七月之声（2024）——向《四月之声》致敬](/articles/cdt/338387.md)
@@ -598,6 +600,4 @@
 6-23 [每日一语 2024.6.22](/articles/cdt/339397.md)
 
 6-22 [澎湃人物｜梅州平远县：38人遇难背后，那些被洪水裹挟的命运](/articles/cdt/339399.md)
-
-6-22 [推动世界美好｜同样是贫困，美国与中国定义标准差异巨大：谈张维为如何偷梁换柱](/articles/cdt/339402.md)
 
