--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-1 [美国同“911”主谋达成认罪协议](/articles/dw/1024722.md)
+
+8-1 [德语媒体：中国国家黑客被曝光](/articles/dw/1024723.md)
+
 8-1 [以色列：哈马斯军事首领戴夫已身亡](/articles/dw/1024724.md)
 
 8-1 [德国防长谈中东和印太局势](/articles/dw/1024725.md)
@@ -596,8 +600,4 @@
 7-2 [美企：中国车将占全球三分之一](/articles/dw/1025020.md)
 
 7-2 [害怕被“卡脖子” 中国IT正在“去美化”](/articles/dw/1025021.md)
-
-7-2 [客座评论： “三明治”里习近平的平衡术](/articles/dw/1025022.md)
-
-7-2 [外国法官辞职引争议 香港商法大环境受质疑](/articles/dw/1025023.md)
 
