--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-1 [哈尼亚葬礼在德黑兰举行，伊朗召集盟友策划复仇行动](/articles/voa/1013645.md)
+
 8-1 [北京否认德国网攻指控，称其为“反华政治操弄”](/articles/voa/1013646.md)
 
 8-1 [中国撤销制裁美企卫讯 分析: 其远洋通讯服务无可替代](/articles/voa/1013647.md)
@@ -598,6 +600,4 @@
 7-21 [法轮功团体全球多地举行反(中共)迫害25周年集会，美国务院发声支持人权](/articles/voa/1013943.md)
 
 7-21 [中情局前分析师被控充当韩国秘密特工的影响](/articles/voa/1013944.md)
-
-7-21 [乌克兰前议员在疑似刺杀中被打死 俄罗斯空袭打死两人](/articles/voa/1013945.md)
 
