--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-2 [中俄联手试图将美国排挤出亚太？](/articles/voa/1013643.md)
+
 8-1 [南京一开发商破天荒同意退还烂尾楼首付房款，能否成为样板仍未知](/articles/voa/1013644.md)
 
 8-1 [哈尼亚葬礼在德黑兰举行，伊朗召集盟友策划复仇行动](/articles/voa/1013645.md)
@@ -598,6 +600,4 @@
 7-21 [中国兴奋剂丑闻阴影不散 西方泳将敦促建立公平竞争环境](/articles/voa/1013941.md)
 
 7-21 [特朗普遇刺后首场竞选造势赞扬多名独裁者 并称习近平慰问信“文情并茂”](/articles/voa/1013942.md)
-
-7-21 [法轮功团体全球多地举行反(中共)迫害25周年集会，美国务院发声支持人权](/articles/voa/1013943.md)
 
