--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-2 [北京卷入兴奋剂丑闻之际，中国网民指控美国运动员服用禁药](/articles/voa/1013637.md)
+
 8-2 [中国推“网证网号” 负评如潮也挡不住](/articles/voa/1013638.md)
 
 8-2 [哈马斯领导人被刺后，中国在中东影响力面临考验](/articles/voa/1013639.md)
@@ -598,6 +600,4 @@
 7-21 [青海仅存藏语学校难逃劫数，藏语文前景堪忧](/articles/voa/1013935.md)
 
 7-21 [国际会计师行中国大裁员 金融国企驻港雇员传遭追讨奖金](/articles/voa/1013936.md)
-
-7-21 [中国官员参与“金厦泳渡”开幕后快闪 与台湾官员“巧妙错开”未打照面](/articles/voa/1013937.md)
 
