--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+8-2 [中俄两国引领对美国“前所未有”情报威胁的浪潮](/articles/voa/1013630.md)
+
+8-2 [面临关税的中国电动汽车制造商仍在取得进展](/articles/voa/1013631.md)
+
+8-2 [中国和主要民主国家加强在太平洋地区的竞争](/articles/voa/1013632.md)
+
+8-2 [美参院表决内含避免美台双重课税的法案因程序问题未能推进立法](/articles/voa/1013633.md)
+
 8-2 [越南与菲律宾海警将在南中国海联合训练](/articles/voa/1013634.md)
 
 8-2 [以色列称已打死10月7日袭击事件的主要策划者穆罕默德·迪夫](/articles/voa/1013635.md)
@@ -592,12 +600,4 @@
 7-22 [拜登将在2024年大选中退出 接下来会发生什么？](/articles/voa/1013928.md)
 
 7-22 [拜登总统退出2024年竞选 支持提名哈里斯](/articles/voa/1013929.md)
-
-7-22 [美国总统拜登将退出总统连任的竞选](/articles/voa/1013930.md)
-
-7-22 [中国全面占领巴基斯坦太阳能市场](/articles/voa/1013931.md)
-
-7-22 [巴基斯坦将要求在其境内中资发电厂换用巴本土煤炭发电](/articles/voa/1013932.md)
-
-7-21 [赖清德：台湾必须捍卫自己主权，了解自己的文化和历史](/articles/voa/1013933.md)
 
