--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-2 [俄罗斯与西方国家进行冷战后最大规模换囚](/articles/nyt/1042516.md)
+
 8-2 [哈尼耶被暗杀细节曝光：爆炸装置两个月前被偷运至其客房](/articles/nyt/1042517.md)
 
 8-1 [真主党哈马斯领导人相继遇袭，中东会爆发更大规模战争吗](/articles/nyt/1042518.md)
@@ -598,6 +600,4 @@
 4-29 [广州遭遇极端天气，龙卷风致五人死亡](/articles/nyt/1042814.md)
 
 4-29 [拜登的自相矛盾：当外交政策与选举考量之间出现冲突](/articles/nyt/1042815.md)
-
-4-27 [美食背后的外交玄机：美国政要来中国吃什么？怎么吃？](/articles/nyt/1042816.md)
 
