--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-2 [记者格什科维奇：被俄罗斯囚禁的苏联流亡者之子](/articles/nyt/1042515.md)
+
 8-2 [俄罗斯与西方国家进行冷战后最大规模换囚](/articles/nyt/1042516.md)
 
 8-2 [哈尼耶被暗杀细节曝光：爆炸装置两个月前被偷运至其客房](/articles/nyt/1042517.md)
@@ -598,6 +600,4 @@
 4-29 [突然之间，中国间谍似乎遍布欧洲](/articles/nyt/1042813.md)
 
 4-29 [广州遭遇极端天气，龙卷风致五人死亡](/articles/nyt/1042814.md)
-
-4-29 [拜登的自相矛盾：当外交政策与选举考量之间出现冲突](/articles/nyt/1042815.md)
 
