--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-2 [【404文库】沈岿&劳东燕｜关于《国家网络身份认证公共服务管理办法（征求意见稿）》的意见](/articles/cdt/338349.md)
+
 8-2 [每日一语 2024.8.1](/articles/cdt/338352.md)
 
 8-2 [【404文库】关尔东｜网号时代要来了，我的看法](/articles/cdt/338356.md)
@@ -598,6 +600,4 @@
 6-24 [独角鲸工作坊｜质疑姜萍作弊的猎巫闹剧，该结束了！](/articles/cdt/339383.md)
 
 6-24 [FT 中文网｜你所熟知的时代，才开始没多久](/articles/cdt/339385.md)
-
-6-24 [三联生活周刊｜河南冷藏车八人窒息遇难：打零工的农村女人们](/articles/cdt/339388.md)
 
