--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-2 [美俄大規模換囚行動 普丁成為贏家？](/articles/dw/1024719.md)
+
 8-2 [客座評論：「我要買GTR」和熊貓經濟](/articles/dw/1024720.md)
 
 8-2 [德國因網攻案召見中國大使 北京提嚴正交涉](/articles/dw/1024721.md)
@@ -598,6 +600,4 @@
 7-3 [中國懲治「台獨」22條：對台人影響幾何？](/articles/dw/1025017.md)
 
 7-2 [首尔：朝鲜国家电视台以俄罗斯卫星替代中国卫星](/articles/dw/1025018.md)
-
-7-2 [挪威称逮捕一本国公民 涉嫌为中国从事间谍活动](/articles/dw/1025019.md)
 
