--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-2 [现代快报｜烟草局招聘被质疑“萝卜坑”，官方回应“是企业实际需要”](/articles/cdt/338342.md)
+
+8-2 [【404文库】南方都市报｜网证网号来了？两部门新规征求意见引争论，试点APP已上线](/articles/cdt/338346.md)
+
 8-2 [【404文库】沈岿&劳东燕｜关于《国家网络身份认证公共服务管理办法（征求意见稿）》的意见](/articles/cdt/338349.md)
 
 8-2 [每日一语 2024.8.1](/articles/cdt/338352.md)
@@ -596,8 +600,4 @@
 6-24 [北同文化AllForQueer｜亮马与一个记者](/articles/cdt/339379.md)
 
 6-24 [【404文库】王五四｜只剩底层群众之间的互相搏斗了](/articles/cdt/339381.md)
-
-6-24 [独角鲸工作坊｜质疑姜萍作弊的猎巫闹剧，该结束了！](/articles/cdt/339383.md)
-
-6-24 [FT 中文网｜你所熟知的时代，才开始没多久](/articles/cdt/339385.md)
 
