--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-2 [美中禁毒合作高级别官员会议在华盛顿举行](/articles/voa/1013626.md)
+
 8-2 [美国承认委内瑞拉反对派候选人赢得总统大选](/articles/voa/1013627.md)
 
 8-2 [民主党开始投票支持卡玛拉·哈里斯获得总统提名](/articles/voa/1013628.md)
@@ -598,6 +600,4 @@
 7-22 [美国总统拜登终止连任竞选 哈里斯说她会寻求民主党的总统提名](/articles/voa/1013924.md)
 
 7-22 [拜登从政将近50年回顾](/articles/voa/1013925.md)
-
-7-22 [拜登总统退出竞选 美国会共和党人要求他立刻辞职 民主党人称他是“最具影响力领袖之一”](/articles/voa/1013926.md)
 
