--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-2 [从“改革一代”到“习近平一代”：何伟看到的中国](/articles/nyt/1042513.md)
+
 8-2 [俄罗斯与西方换囚关键人物：普京最想要的是谁](/articles/nyt/1042514.md)
 
 8-2 [记者格什科维奇：被俄罗斯囚禁的苏联流亡者之子](/articles/nyt/1042515.md)
@@ -598,6 +600,4 @@
 4-30 [马斯克访华，为特斯拉全自动驾驶技术落地铺路](/articles/nyt/1042811.md)
 
 4-29 [美国大学校园抗议给民主党带来挑战](/articles/nyt/1042812.md)
-
-4-29 [突然之间，中国间谍似乎遍布欧洲](/articles/nyt/1042813.md)
 
