--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-2 [美国预计7月新增17.5万个就业岗位 劳动力市场逐渐降温](/articles/voa/1013624.md)
+
 8-2 [美俄历史性大规模换囚后 三名获释的美国人回到美国](/articles/voa/1013625.md)
 
 8-2 [美中禁毒合作高级别官员会议在华盛顿举行](/articles/voa/1013626.md)
@@ -598,6 +600,4 @@
 7-22 [哈里斯称将“争取并赢得”总统候选人提名，看看她在中国议题上说过哪些话](/articles/voa/1013922.md)
 
 7-22 [拜登退选决定霸占微博热搜榜，中国人惊叹“见证历史”](/articles/voa/1013923.md)
-
-7-22 [美国总统拜登终止连任竞选 哈里斯说她会寻求民主党的总统提名](/articles/voa/1013924.md)
 
