--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-2 [李翘楚8月3日刑满出狱，海外民运人士忧“释而不放”](/articles/voa/1013619.md)
+
 8-2 [拜登首次就哈尼亚遇刺身亡发表评论 认为“无助于”停火谈判](/articles/voa/1013620.md)
 
 8-2 [澳大利亚调查指4月加沙国际援助车队遭致命袭击系以军失误所致](/articles/voa/1013621.md)
@@ -598,6 +600,4 @@
 7-22 [拜登的退选给战争、贸易争端和其他外交政策挑战带来了不确定性](/articles/voa/1013917.md)
 
 7-22 [美国副总统卡玛拉·哈里斯小档案—一位打破玻璃天花板的民主党人](/articles/voa/1013918.md)
-
-7-22 [中国央行意外下调关键政策利率以提振经济](/articles/voa/1013919.md)
 
