--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-3 [克里姆林宫：美俄换囚与俄乌和谈无关](/articles/voa/1013613.md)
+
 8-3 [美国7月份就业增长放缓，失业率上升](/articles/voa/1013614.md)
 
 8-3 [复旦大学布达佩斯校区恐成中国的又一个“国际烂尾工程”？](/articles/voa/1013615.md)
@@ -598,6 +600,4 @@
 7-22 [菲律宾总统马科斯：菲律宾在领土争议中“不能退让”](/articles/voa/1013911.md)
 
 7-22 [聿文视界：三中全会，虚张声势的“改革”](/articles/voa/1013912.md)
-
-7-22 [内塔尼亚胡将访美,称无论谁当选总统以色列都将是美国的强大盟友](/articles/voa/1013913.md)
 
