--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-3 [被中国制裁的美国众议员麦戈尔：这是我的“荣誉勋章”](/articles/voa/1013608.md)
+
 8-3 [美国拒绝了越南提出的将其认定为“市场经济”的要求](/articles/voa/1013609.md)
 
 8-3 [哈里斯已获得足够成为民主党总统候选人的党代表票数](/articles/voa/1013610.md)
@@ -598,6 +600,4 @@
 7-23 [乌中关系有突破：北京自俄乌战争以来首次邀请乌外长库列巴访华，寻求结束战争的办法](/articles/voa/1013906.md)
 
 7-22 [路透独家：非法流入俄罗斯的芯片减缓，但中港仍是转运中心](/articles/voa/1013907.md)
-
-7-22 [哈里斯加入竞选后，中国社交媒体倒向特朗普](/articles/voa/1013908.md)
 
