--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
+
+8-3 [有马体育｜伤中泳：中国游泳队疑云](/articles/cdt/338330.md)
+
 8-3 [每日一语 2024.8.2](/articles/cdt/338333.md)
 
 8-2 [现代快报｜烟草局招聘被质疑“萝卜坑”，官方回应“是企业实际需要”](/articles/cdt/338342.md)
@@ -596,8 +600,4 @@
 6-24 [苍山夜语｜野夫：我的生活非常的诗性，一点没有辜负我的生命](/articles/cdt/339368.md)
 
 6-24 [【404帖子】sven_shi｜关于税务征管当年有过一个有名案例](/articles/cdt/339374.md)
-
-6-24 [正面连接｜脱下长衫，仍是牛马](/articles/cdt/339375.md)
-
-6-24 [远鸣｜俄国又遭恐袭，从牛弹琴的妙手剖析其宣传手法](/articles/cdt/339377.md)
 
