--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-3 [我是麦杰逊｜烟草单位招聘背后的“猫腻”！](/articles/cdt/338321.md)
+
 8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
 
 8-3 [有马体育｜伤中泳：中国游泳队疑云](/articles/cdt/338330.md)
@@ -598,6 +600,4 @@
 6-24 [人间theLivings｜“接好孕”的三年：针眼、苦药与内窥](/articles/cdt/339366.md)
 
 6-24 [苍山夜语｜野夫：我的生活非常的诗性，一点没有辜负我的生命](/articles/cdt/339368.md)
-
-6-24 [【404帖子】sven_shi｜关于税务征管当年有过一个有名案例](/articles/cdt/339374.md)
 
