--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-3 [从历史性换囚中获释，俄罗斯反对派亚辛抵德、潜伏特工返莫斯科](/articles/voa/1013602.md)
+
 8-3 [马克龙赞扬奥运会开幕式的“大胆”及捍卫艺术自由](/articles/voa/1013603.md)
 
 8-3 [连环刺杀或将引爆中东火药桶，以色列面临多线战争的挑战](/articles/voa/1013604.md)
@@ -598,6 +600,4 @@
 7-23 [香港书展期间流行书被迫下架 参展商对敏感不敏感莫名其妙](/articles/voa/1013900.md)
 
 7-23 [中国主持哈马斯-法塔赫会谈: 力促和解还是扩张影响力？](/articles/voa/1013901.md)
-
-7-23 [美国财长耶伦访问巴西欲加强与拉美的关系 中国在美国“后院”的扩张引起警觉](/articles/voa/1013902.md)
 
