--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-3 [匈牙利放宽对俄罗斯人签证规定 欧盟“深表忧虑”](/articles/dw/1024712.md)
+
 8-2 [德国加入联合国军司令部 维护韩半岛稳定](/articles/dw/1024713.md)
 
 8-2 [菲律宾与日本首次在南中国海举行联合军演](/articles/dw/1024714.md)
@@ -598,6 +600,4 @@
 7-3 [拜登：“几乎在辩论台上睡着”  民主党内表示担忧](/articles/dw/1025010.md)
 
 7-3 [中國登檢扣押台灣漁船 專家：海上法律戰升級](/articles/dw/1025011.md)
-
-7-3 [印尼卫生部长:中国羽球选手张志杰本有望救活](/articles/dw/1025012.md)
 
