--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-3 [苏林成阮富仲接班人 誓言反腐 外交政策不变](/articles/dw/1024709.md)
+
+8-3 [美国取消9/11阴谋策划者的认罪协议](/articles/dw/1024710.md)
+
 8-3 [百年巴黎 奥运今昔](/articles/dw/1024711.md)
 
 8-3 [匈牙利放宽对俄罗斯人签证规定 欧盟“深表忧虑”](/articles/dw/1024712.md)
@@ -596,8 +600,4 @@
 7-3 [美国实体清单新增六家公司 四家涉培训中国军人](/articles/dw/1025007.md)
 
 7-3 [上合会议普习再同框 逐鹿中亚共面西方](/articles/dw/1025008.md)
-
-7-3 [中国企业大举投资匈牙利 居民忧环境污染](/articles/dw/1025009.md)
-
-7-3 [拜登：“几乎在辩论台上睡着”  民主党内表示担忧](/articles/dw/1025010.md)
 
