--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-3 [越南国家主席苏林出任越共总书记](/articles/voa/1013601.md)
+
 8-3 [从历史性换囚中获释，俄罗斯反对派亚辛抵德、潜伏特工返莫斯科](/articles/voa/1013602.md)
 
 8-3 [马克龙赞扬奥运会开幕式的“大胆”及捍卫艺术自由](/articles/voa/1013603.md)
@@ -598,6 +600,4 @@
 7-23 [中国降低几个主要利率来支持脆弱的经济](/articles/voa/1013899.md)
 
 7-23 [香港书展期间流行书被迫下架 参展商对敏感不敏感莫名其妙](/articles/voa/1013900.md)
-
-7-23 [中国主持哈马斯-法塔赫会谈: 力促和解还是扩张影响力？](/articles/voa/1013901.md)
 
