--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-3 [【旧文重温】新闻传播学研｜中国队服用兴奋剂的黑历史](/articles/cdt/338309.md)
+
+8-3 [木蹊说｜终究是祝局长扛下了所有](/articles/cdt/338314.md)
+
 8-3 [我是麦杰逊｜烟草单位招聘背后的“猫腻”！](/articles/cdt/338321.md)
 
 8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
@@ -596,8 +600,4 @@
 6-25 [润飞工作室｜一点点被掏空的外汇](/articles/cdt/339360.md)
 
 6-25 [马江博｜GDP能注水，但税收没法撒谎，看完各地数据，我很心惊](/articles/cdt/339362.md)
-
-6-24 [人间theLivings｜“接好孕”的三年：针眼、苦药与内窥](/articles/cdt/339366.md)
-
-6-24 [苍山夜语｜野夫：我的生活非常的诗性，一点没有辜负我的生命](/articles/cdt/339368.md)
 
