--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-3 [获释俄罗斯政治犯：坚信祖国终将自由](/articles/dw/1024707.md)
+
+8-3 [哈里斯成为总统候选人 特朗普准备迎战](/articles/dw/1024708.md)
+
 8-3 [苏林成阮富仲接班人 誓言反腐 外交政策不变](/articles/dw/1024709.md)
 
 8-3 [美国取消9/11阴谋策划者的认罪协议](/articles/dw/1024710.md)
@@ -596,8 +600,4 @@
 7-3 [欧足联调查土耳其球员“灰狼”手势](/articles/dw/1025005.md)
 
 7-3 [欧洲最萌河马征名：建议超过1万个](/articles/dw/1025006.md)
-
-7-3 [美国实体清单新增六家公司 四家涉培训中国军人](/articles/dw/1025007.md)
-
-7-3 [上合会议普习再同框 逐鹿中亚共面西方](/articles/dw/1025008.md)
 
