--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-3 [四环青年｜地面塌陷记者采访遭反问为何报道，让人哭笑不得](/articles/cdt/338304.md)
+
+8-3 [维舟｜总得有人发出点不同的声音](/articles/cdt/338307.md)
+
 8-3 [【旧文重温】新闻传播学研｜中国队服用兴奋剂的黑历史](/articles/cdt/338309.md)
 
 8-3 [木蹊说｜终究是祝局长扛下了所有](/articles/cdt/338314.md)
@@ -596,8 +600,4 @@
 6-25 [每日一语 2024.6.23](/articles/cdt/339356.md)
 
 6-25 [每日一语 2024.6.24](/articles/cdt/339358.md)
-
-6-25 [润飞工作室｜一点点被掏空的外汇](/articles/cdt/339360.md)
-
-6-25 [马江博｜GDP能注水，但税收没法撒谎，看完各地数据，我很心惊](/articles/cdt/339362.md)
 
