--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-4 [哈马斯领导人死后人们对于中东战争升级的担心增加](/articles/voa/1013591.md)
+
 8-4 [伊朗：短程弹药打死哈马斯的哈尼亚，重申誓言报复](/articles/voa/1013592.md)
 
 8-4 [菲律宾已经完成坐滩军舰加固任务，菲中摩擦夺料将更加激烈](/articles/voa/1013593.md)
@@ -598,6 +600,4 @@
 7-23 [美众院中共问题特设委员会领袖撰文呼吁中国拆除“防火长城”](/articles/voa/1013889.md)
 
 7-23 [美国支持缅甸派非政治代表出席东盟会议](/articles/voa/1013890.md)
-
-7-23 [华盛顿对菲中缓解南中国海紧张局势的外交努力表示欢迎](/articles/voa/1013891.md)
 
