--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-4 [【重温】米米亚娜｜逃离体制](/articles/cdt/338297.md)
+
 8-4 [歪脑｜逐渐把不住风向的胡锡进和养蛊反噬的宣传标兵《环球时报》](/articles/cdt/338300.md)
 
 8-3 [四环青年｜地面塌陷记者采访遭反问为何报道，让人哭笑不得](/articles/cdt/338304.md)
@@ -598,6 +600,4 @@
 6-25 [筑基政经｜日本母子苏州遇袭与中国经济](/articles/cdt/339351.md)
 
 6-25 [城市地得｜在还有日本人学校的时候，请珍惜它吧](/articles/cdt/339353.md)
-
-6-25 [每日一语 2024.6.23](/articles/cdt/339356.md)
 
