--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-4 [被监禁的白俄罗斯诺贝尔奖得主未被纳入历史性换囚 支持者表达失望](/articles/voa/1013586.md)
+
+8-4 [中国推促消费政策 拟扩大“免签朋友圈”、改善消费环境](/articles/voa/1013587.md)
+
 8-4 [哈里斯拒绝了特朗普所提议的替代性选举辩论](/articles/voa/1013588.md)
 
 8-4 [普京提议抗洪援助 金正恩感谢“最真诚的朋友”](/articles/voa/1013589.md)
@@ -596,8 +600,4 @@
 7-23 [美联社：哈里斯获得足够党代表支持成为民主党总统候选人](/articles/voa/1013884.md)
 
 7-23 [美日将举行2+2安全会谈讨论核威慑问题](/articles/voa/1013885.md)
-
-7-23 [民主党官员和捐助者纷纷支持副总统哈里斯获得本党总统候选人提名](/articles/voa/1013886.md)
-
-7-23 [“动态威慑”：澳专家建议美及盟友动态回应北京对台湾的每一步灰带地带动作](/articles/voa/1013887.md)
 
