--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-4 [德国防长到访菲律宾 两国加强军事合作](/articles/dw/1024701.md)
+
+8-4 [巴黎奥运的特别时刻](/articles/dw/1024702.md)
+
 8-4 [客座评论：党国的舆论棒槌打向胡锡进](/articles/dw/1024703.md)
 
 8-4 [U17潜艇登陆：从海洋到博物馆](/articles/dw/1024704.md)
@@ -596,8 +600,4 @@
 7-4 [肖尔茨给出保证：德国不会成为俄乌战争方](/articles/dw/1024999.md)
 
 7-4 [忧心安全 德政府喊停中企收购燃气轮机企业](/articles/dw/1025000.md)
-
-7-4 [欧洲杯疯足球: 德国的球迷文化](/articles/dw/1025001.md)
-
-7-4 [刚果民兵组织袭击金矿 造成至少4名中国人死亡](/articles/dw/1025002.md)
 
