--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-4 [中国车“化整为零”进军台湾 台湾出台措施防堵倾销](/articles/voa/1013582.md)
+
+8-4 [一个台湾志愿兵在乌克兰的战争洗礼](/articles/voa/1013583.md)
+
 8-4 [加入驻韩联合国军司令部、与菲律宾深化防卫合作 德国正扩大在亚洲的参与](/articles/voa/1013584.md)
 
 8-4 [梵蒂冈对奥运会开幕式模仿《最后的晚餐》的桥段感到被冒犯](/articles/voa/1013585.md)
@@ -596,8 +600,4 @@
 7-23 [日本称无论谁入主白宫都将与美国合作维护台海和平](/articles/voa/1013880.md)
 
 7-23 [受台风影响 台湾汉光军演取消部分海空课目](/articles/voa/1013881.md)
-
-7-23 [巴勒斯坦各派在中国会谈后同意结束分歧，组建民族团结政府](/articles/voa/1013882.md)
-
-7-23 [美官员称：拜登星期四将在白宫会见内塔尼亚胡](/articles/voa/1013883.md)
 
