--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-4 [委内瑞拉反对派领袖躲藏数日后露面与支持者抗议马杜罗窃取选举](/articles/voa/1013581.md)
+
 8-4 [中国车“化整为零”进军台湾 台湾出台措施防堵倾销](/articles/voa/1013582.md)
 
 8-4 [一个台湾志愿兵在乌克兰的战争洗礼](/articles/voa/1013583.md)
@@ -598,6 +600,4 @@
 7-23 [巴黎奥运会即将开幕，美国有望蝉联奖牌榜首位 中国或将争夺最多金牌](/articles/voa/1013879.md)
 
 7-23 [日本称无论谁入主白宫都将与美国合作维护台海和平](/articles/voa/1013880.md)
-
-7-23 [受台风影响 台湾汉光军演取消部分海空课目](/articles/voa/1013881.md)
 
