--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-4 [巴基斯坦的中国债务困局](/articles/dw/1024699.md)
+
+8-4 [德国外长强调在德部署美国远程武器的重要性](/articles/dw/1024700.md)
+
 8-4 [德国防长到访菲律宾 两国加强军事合作](/articles/dw/1024701.md)
 
 8-4 [巴黎奥运的特别时刻](/articles/dw/1024702.md)
@@ -596,8 +600,4 @@
 7-4 [欧盟开始对中国电动车加征临时关税](/articles/dw/1024997.md)
 
 7-4 [长平观察：仇恨言论会危及中共政权吗？](/articles/dw/1024998.md)
-
-7-4 [肖尔茨给出保证：德国不会成为俄乌战争方](/articles/dw/1024999.md)
-
-7-4 [忧心安全 德政府喊停中企收购燃气轮机企业](/articles/dw/1025000.md)
 
