--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 8-3 [我是麦杰逊｜烟草单位招聘背后的“猫腻”！](/articles/cdt/338321.md)
 
+8-4 [【CDT周报】第181期：我担心哪天我的上网证被吊销了](/articles/cdt/338323.md)
+
 8-3 [法规指南｜创纪录的寻衅滋事案：内蒙11牧民维权被抓，开庭93天仍未审结](/articles/cdt/338328.md)
 
 8-3 [有马体育｜伤中泳：中国游泳队疑云](/articles/cdt/338330.md)
@@ -598,6 +600,4 @@
 6-25 [极昼工作室｜在河南农村，赌一场雨](/articles/cdt/339349.md)
 
 6-25 [筑基政经｜日本母子苏州遇袭与中国经济](/articles/cdt/339351.md)
-
-6-25 [城市地得｜在还有日本人学校的时候，请珍惜它吧](/articles/cdt/339353.md)
 
