--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-4 [拉疯喜剧：用喜剧表达华人生活的酸甜苦辣](/articles/voa/1013579.md)
+
+8-4 [哈以和谈流产后，加沙官员称，以色列空袭一医院炸死五人](/articles/voa/1013580.md)
+
 8-4 [委内瑞拉反对派领袖躲藏数日后露面与支持者抗议马杜罗窃取选举](/articles/voa/1013581.md)
 
 8-4 [中国车“化整为零”进军台湾 台湾出台措施防堵倾销](/articles/voa/1013582.md)
@@ -596,8 +600,4 @@
 7-23 [回应美国关切，克里姆林宫称俄中北极合作不针对任何其他国家](/articles/voa/1013877.md)
 
 7-23 [报告：香港成国际回避制裁中心 协助俄伊朝 呼吁制裁中港银行](/articles/voa/1013878.md)
-
-7-23 [巴黎奥运会即将开幕，美国有望蝉联奖牌榜首位 中国或将争夺最多金牌](/articles/voa/1013879.md)
-
-7-23 [日本称无论谁入主白宫都将与美国合作维护台海和平](/articles/voa/1013880.md)
 
