--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-5 [中国留学生在澳大利亚寻求政治庇护人数激增](/articles/voa/1013575.md)
+
 8-5 [中东紧张局势加剧](/articles/voa/1013576.md)
 
 8-5 [中国养老危机四伏 官贵民贱激起众怒](/articles/voa/1013577.md)
@@ -598,6 +600,4 @@
 7-24 [美国特勤局局长因特朗普遇刺事件引咎辞职](/articles/voa/1013873.md)
 
 7-24 [中国钢材出口暴增冲击全球市场，贸易摩擦预计将严重恶化](/articles/voa/1013874.md)
-
-7-23 [专家学者公开声讨 指定居所监视居住会否全面废止？](/articles/voa/1013875.md)
 
