--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-5 [台湾庆祝对中国的羽毛球胜利，但现场台湾观众不得展示标语和彩绘](/articles/voa/1013574.md)
+
 8-5 [中国留学生在澳大利亚寻求政治庇护人数激增](/articles/voa/1013575.md)
 
 8-5 [中东紧张局势加剧](/articles/voa/1013576.md)
@@ -598,6 +600,4 @@
 7-24 [印度高官：印度要因应国际局势变化，考虑接纳中国直接投资](/articles/voa/1013872.md)
 
 7-24 [美国特勤局局长因特朗普遇刺事件引咎辞职](/articles/voa/1013873.md)
-
-7-24 [中国钢材出口暴增冲击全球市场，贸易摩擦预计将严重恶化](/articles/voa/1013874.md)
 
