--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-5 [每日一语 2024.8.4](/articles/cdt/338289.md)
+
 8-4 [【重温】米米亚娜｜逃离体制](/articles/cdt/338297.md)
 
 8-4 [歪脑｜逐渐把不住风向的胡锡进和养蛊反噬的宣传标兵《环球时报》](/articles/cdt/338300.md)
@@ -598,6 +600,4 @@
 6-25 [西楼饮月｜只需一人努力，就可以让一个国家进入原始社会](/articles/cdt/339347.md)
 
 6-25 [极昼工作室｜在河南农村，赌一场雨](/articles/cdt/339349.md)
-
-6-25 [筑基政经｜日本母子苏州遇袭与中国经济](/articles/cdt/339351.md)
 
