--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,11 @@
 
 8-5 [北青深一度｜举报导师失范的陕师大女生：短短的4天、漫长的7年](/articles/cdt/338285.md)
 
+8-5 [兽楼处｜一个复杂市场的消费者](/articles/cdt/338286.md)
+
 8-5 [每日一语 2024.8.4](/articles/cdt/338289.md)
+
+8-5 [莽莽｜港狱虹援：铁窗内外的跨儿行动者](/articles/cdt/338290.md)
 
 8-4 [【重温】米米亚娜｜逃离体制](/articles/cdt/338297.md)
 
@@ -596,8 +600,4 @@
 6-26 [凤凰网｜致命大火背后的中国人：在韩国工厂做最脏累险的活](/articles/cdt/339341.md)
 
 6-26 [亮见｜高高在上的官老爷，放过农民吧](/articles/cdt/339343.md)
-
-6-26 [无声无光｜被攻击的为何是在华日本人学校？](/articles/cdt/339345.md)
-
-6-25 [西楼饮月｜只需一人努力，就可以让一个国家进入原始社会](/articles/cdt/339347.md)
 
