--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-5 [巴黎奧運性別爭議延燒 女拳手：停止霸凌](/articles/dw/1024698.md)
+
 8-4 [巴基斯坦的中国债务困局](/articles/dw/1024699.md)
 
 8-4 [德国外长强调在德部署美国远程武器的重要性](/articles/dw/1024700.md)
@@ -598,6 +600,4 @@
 7-4 [内部分歧下欧盟开始对中国电动车加征临时关税](/articles/dw/1024996.md)
 
 7-4 [欧盟开始对中国电动车加征临时关税](/articles/dw/1024997.md)
-
-7-4 [长平观察：仇恨言论会危及中共政权吗？](/articles/dw/1024998.md)
 
