--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-5 [财新PMI显示中国服务业活动进一步扩张 但外部需求放缓](/articles/voa/1013570.md)
+
+8-5 [美国表示在中东增加军事部署目的是缓和紧张局势](/articles/voa/1013571.md)
+
 8-5 [美国预计建议在自动驾驶汽车中禁止使用中国软件](/articles/voa/1013572.md)
 
 8-5 [乌克兰总统泽连斯基展示新F-16战机，将在空中打击俄罗斯](/articles/voa/1013573.md)
@@ -596,8 +600,4 @@
 7-24 [一名中国公民因涉嫌串谋向美国进口逾两吨芬太尼原料而被起诉](/articles/voa/1013868.md)
 
 7-24 [联合国也门问题特使：胡塞武装对红海航运的威胁正在增加](/articles/voa/1013869.md)
-
-7-24 [厄瓜多尔海军准备打击加拉帕戈斯群岛周边的主要来自中国的非法捕鱼船队](/articles/voa/1013870.md)
-
-7-24 [卡玛拉·哈里斯角逐美国总统在她的印度祖籍地引发不同反响](/articles/voa/1013871.md)
 
