--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-5 [哈里斯将在几个战场州开展竞选活动前公布副总统候选人](/articles/voa/1013569.md)
+
 8-5 [财新PMI显示中国服务业活动进一步扩张 但外部需求放缓](/articles/voa/1013570.md)
 
 8-5 [美国表示在中东增加军事部署目的是缓和紧张局势](/articles/voa/1013571.md)
@@ -598,6 +600,4 @@
 7-24 [因腐败指控被定罪的参议员梅嫩德斯据称将辞职](/articles/voa/1013867.md)
 
 7-24 [一名中国公民因涉嫌串谋向美国进口逾两吨芬太尼原料而被起诉](/articles/voa/1013868.md)
-
-7-24 [联合国也门问题特使：胡塞武装对红海航运的威胁正在增加](/articles/voa/1013869.md)
 
