--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-5 [【404文库】徐雪芬札记｜上网，不是一种奢侈品](/articles/cdt/338275.md)
+
+8-5 [维舟｜运动员不是夺金的工具人](/articles/cdt/338277.md)
+
 8-5 [【404帖子】黄裕生｜真正的现代化国家绝对不是“编户齐民”的国家](/articles/cdt/338280.md)
 
 8-5 [北青深一度｜举报导师失范的陕师大女生：短短的4天、漫长的7年](/articles/cdt/338285.md)
@@ -596,8 +600,4 @@
 6-26 [建设性意见｜袭击日本人是偶发，袭击美国人是偶发，欢呼声也是偶发吗？](/articles/cdt/339327.md)
 
 6-26 [税乎网｜深圳税务局税收违法案例查询链接404了](/articles/cdt/339335.md)
-
-6-26 [木蹊说｜日本籍母子被刺，问题到底出在哪？](/articles/cdt/339337.md)
-
-6-26 [凤凰网｜致命大火背后的中国人：在韩国工厂做最脏累险的活](/articles/cdt/339341.md)
 
