--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-5 [受美国就业数据影响，亚洲股市周一暴跌](/articles/voa/1013567.md)
+
 8-5 [金正恩出席战术弹道导弹发射车交接仪式 呼吁扩大核武力量](/articles/voa/1013568.md)
 
 8-5 [哈里斯将在几个战场州开展竞选活动前公布副总统候选人](/articles/voa/1013569.md)
@@ -598,6 +600,4 @@
 7-24 [布林肯和奥斯汀在国内政治不确定性中加强与亚洲盟友的关系](/articles/voa/1013865.md)
 
 7-24 [哈马斯在中国与敌对法塔赫达成团结协议，美国重申不支持哈马斯参与战后治理](/articles/voa/1013866.md)
-
-7-24 [因腐败指控被定罪的参议员梅嫩德斯据称将辞职](/articles/voa/1013867.md)
 
