--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-5 [柬埔寨动工兴建中国支持的争议运河](/articles/voa/1013565.md)
+
+8-5 [聿文视界：习第三任期的新权力结构：特征明显，问题多多](/articles/voa/1013566.md)
+
 8-5 [受美国就业数据影响，亚洲股市周一暴跌](/articles/voa/1013567.md)
 
 8-5 [金正恩出席战术弹道导弹发射车交接仪式 呼吁扩大核武力量](/articles/voa/1013568.md)
@@ -596,8 +600,4 @@
 7-24 [对华政策跨国议会联盟将在台湾举行年度峰会，议程聚焦台海稳定](/articles/voa/1013863.md)
 
 7-24 [乌克兰外长首次访华，普京的后台老板能做战争调停人吗?](/articles/voa/1013864.md)
-
-7-24 [布林肯和奥斯汀在国内政治不确定性中加强与亚洲盟友的关系](/articles/voa/1013865.md)
-
-7-24 [哈马斯在中国与敌对法塔赫达成团结协议，美国重申不支持哈马斯参与战后治理](/articles/voa/1013866.md)
 
