--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-5 [孟加拉抗议活动不止 哈西娜总理已逃到国外](/articles/dw/1024691.md)
+
+8-5 [台湾要求法国调查台湾球迷所持标语遭抢夺事件](/articles/dw/1024692.md)
+
 8-5 [美国拟禁止自动驾驶汽车用中国软件](/articles/dw/1024693.md)
 
 8-5 [南华早报：邓洪波将出任中国驻德大使](/articles/dw/1024694.md)
@@ -596,8 +600,4 @@
 7-5 [AI大会上海举行 中国努力追赶美国](/articles/dw/1024989.md)
 
 7-5 [特斯拉柏林超级工厂扩建获批](/articles/dw/1024990.md)
-
-7-5 [血色香蕉: 美国法院判“金吉达”违反人权应赔偿3800万](/articles/dw/1024991.md)
-
-7-5 [英国大“变天” 执政党惨败 工党大胜](/articles/dw/1024992.md)
 
