--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-5 [着眼威慑中国，美军方看中扼守印度洋咽喉要道的澳大利亚小岛](/articles/voa/1013563.md)
+
+8-5 [菲越将举行首次联合海岸警卫队演习，中国军用无人机沿越南海岸飞行](/articles/voa/1013564.md)
+
 8-5 [柬埔寨动工兴建中国支持的争议运河](/articles/voa/1013565.md)
 
 8-5 [聿文视界：习第三任期的新权力结构：特征明显，问题多多](/articles/voa/1013566.md)
@@ -596,8 +600,4 @@
 7-24 [特朗普与哈里斯互相抨击,美国总统大选再掀高潮](/articles/voa/1013861.md)
 
 7-24 [台海两岸将在金门就2月快艇翻覆事件举行后续协商](/articles/voa/1013862.md)
-
-7-24 [对华政策跨国议会联盟将在台湾举行年度峰会，议程聚焦台海稳定](/articles/voa/1013863.md)
-
-7-24 [乌克兰外长首次访华，普京的后台老板能做战争调停人吗?](/articles/voa/1013864.md)
 
