--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-5 [码头水鬼 | 泡在洪水里看奥运](/articles/cdt/338258.md)
+
+8-5 [浣花溪杜甫｜挟患儿以睡其母，曝光之前都是楷模，曝光之后都是恶魔](/articles/cdt/338261.md)
+
+8-5 [独角鲸工作坊｜这个考编大省，史无前例地砍掉了十万编制](/articles/cdt/338263.md)
+
+8-5 [亮见｜这件事如果属实，那就太令人发指了](/articles/cdt/338265.md)
+
 8-5 [中国新闻周刊｜全国性抗议后，孟加拉国“铁娘子”总理辞职了](/articles/cdt/338269.md)
 
 8-5 [【404文库】徐雪芬札记｜上网，不是一种奢侈品](/articles/cdt/338275.md)
@@ -592,12 +600,4 @@
 6-27 [城市的地得｜善良而勇敢的人，不该如此孤立](/articles/cdt/339313.md)
 
 6-27 [歪脑｜纪录片《乌鲁木齐中路》全球放映  声援被捕导演陈品霖](/articles/cdt/339315.md)
-
-6-27 [每日一语 2024.6.26](/articles/cdt/339317.md)
-
-6-26 [【告别信】LonelyPlanet｜祝你旅途愉快！](/articles/cdt/339320.md)
-
-6-26 [【网络民议】百年不遇年年遇，偶发事件常常发](/articles/cdt/339325.md)
-
-6-26 [建设性意见｜袭击日本人是偶发，袭击美国人是偶发，欢呼声也是偶发吗？](/articles/cdt/339327.md)
 
