--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-6 [中国网民祝贺孟加拉国的反政府抗议民众](/articles/voa/1013557.md)
+
 8-6 [硕士论文惹争议，香港巴黎奥运女子重剑金牌得主江旻憓宣布退役](/articles/voa/1013558.md)
 
 8-6 [TikTok承诺永久撤回“Lite”奖励计划，欧盟宣布调查结案](/articles/voa/1013559.md)
@@ -598,6 +600,4 @@
 7-24 [台风“凯米”逼近 台湾停工停课、取消航班](/articles/voa/1013855.md)
 
 7-24 [参众两院民主党人团结在哈里斯身后，共和党人发起猛烈批评](/articles/voa/1013856.md)
-
-7-24 [俄罗斯：乌克兰无人机击中克拉斯诺达尔渡轮码头并造成人员伤亡](/articles/voa/1013857.md)
 
