--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-6 [拜登在中东紧张局势加剧之际举行安全会谈](/articles/voa/1013555.md)
+
+8-6 [日本股市暴跌，在全球股市率先狂抛](/articles/voa/1013556.md)
+
 8-6 [中国网民祝贺孟加拉国的反政府抗议民众](/articles/voa/1013557.md)
 
 8-6 [硕士论文惹争议，香港巴黎奥运女子重剑金牌得主江旻憓宣布退役](/articles/voa/1013558.md)
@@ -596,8 +600,4 @@
 7-24 [拜登将在白宫椭圆形办公室发布全国讲话](/articles/voa/1013853.md)
 
 7-24 [朝鲜垃圾气球落在首尔总统府所在地 韩动员防化应急组勘查](/articles/voa/1013854.md)
-
-7-24 [台风“凯米”逼近 台湾停工停课、取消航班](/articles/voa/1013855.md)
-
-7-24 [参众两院民主党人团结在哈里斯身后，共和党人发起猛烈批评](/articles/voa/1013856.md)
 
