--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-6 [孟加拉国总理辞职出逃，中国“一带一路”项目面临考验](/articles/voa/1013554.md)
+
 8-6 [拜登在中东紧张局势加剧之际举行安全会谈](/articles/voa/1013555.md)
 
 8-6 [日本股市暴跌，在全球股市率先狂抛](/articles/voa/1013556.md)
@@ -598,6 +600,4 @@
 7-24 [以色列谴责《北京宣言》将哈马斯纳入战后加沙政府](/articles/voa/1013852.md)
 
 7-24 [拜登将在白宫椭圆形办公室发布全国讲话](/articles/voa/1013853.md)
-
-7-24 [朝鲜垃圾气球落在首尔总统府所在地 韩动员防化应急组勘查](/articles/voa/1013854.md)
 
