--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-6 [如何推翻一位强人领袖？](/articles/nyt/1042508.md)
+
 8-5 [现实版《美国谍梦》：一对俄罗斯间谍夫妇的潜伏人生](/articles/nyt/1042509.md)
 
 8-5 [中国游泳队的巴黎奥运：更多奖牌，更多质疑](/articles/nyt/1042510.md)
@@ -598,6 +600,4 @@
 5-6 [美食背后的外交玄机：美国政要来中国吃什么？怎么吃？](/articles/nyt/1042806.md)
 
 5-6 [中国买家“爆买”，黄金价格飙升至历史最高](/articles/nyt/1042807.md)
-
-4-30 [美元坚挺对全世界意味着什么](/articles/nyt/1042808.md)
 
