--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-6 [希望在美国扩张的中国企业面临不确定性和怀疑](/articles/voa/1013548.md)
+
+8-6 [拜登旨在缓解中东紧张局势](/articles/voa/1013549.md)
+
 8-6 [联合国调查：九名雇员可能参与10月7日针对以色列的恐怖攻击](/articles/voa/1013550.md)
 
 8-6 [谷歌在反垄断案中败诉](/articles/voa/1013551.md)
@@ -596,8 +600,4 @@
 7-25 [中共二十届三中全会后 如何前行？](/articles/voa/1013846.md)
 
 7-24 [欧盟对中国电动汽车征收关税 或拖累欧盟绿色目标进展](/articles/voa/1013847.md)
-
-7-24 [公安包庇、仇外心态，中国“虎师”体罚教育何时了?](/articles/voa/1013848.md)
-
-7-24 [美国盐湖城获得2034年冬季奥运会的主办权](/articles/voa/1013849.md)
 
