--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-6 [对美国经济放缓担忧加剧，全球股市大崩盘](/articles/nyt/1042507.md)
+
 8-6 [如何推翻一位强人领袖？](/articles/nyt/1042508.md)
 
 8-5 [现实版《美国谍梦》：一对俄罗斯间谍夫妇的潜伏人生](/articles/nyt/1042509.md)
@@ -598,6 +600,4 @@
 5-6 [习近平五年来首次访问欧洲，寻找战略机遇](/articles/nyt/1042805.md)
 
 5-6 [美食背后的外交玄机：美国政要来中国吃什么？怎么吃？](/articles/nyt/1042806.md)
-
-5-6 [中国买家“爆买”，黄金价格飙升至历史最高](/articles/nyt/1042807.md)
 
