--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-6 [推翻哈西娜的抗议者希望诺贝尔奖得主穆罕默德·尤努斯组建孟加拉国临时政府](/articles/voa/1013545.md)
+
 8-6 [美国向伊朗传递信息：不要在“关键时刻”将紧张局势升级](/articles/voa/1013546.md)
 
 8-6 [大规模抛售震动华尔街后 日经指数周二早盘飙升近11%](/articles/voa/1013547.md)
@@ -598,6 +600,4 @@
 7-25 [东盟外长在老挝开会 商讨解决缅甸危机和南中国海争端的办法](/articles/voa/1013843.md)
 
 7-25 [中国公布保密法实施细则，外国投资者望而生畏](/articles/voa/1013844.md)
-
-7-25 [印度为加快发展进行政策调整，放宽中国投资限制得到进一步证实](/articles/voa/1013845.md)
 
