--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-6 [法国警方消息人士：大皇宫等40家博物馆遭勒索软件攻击](/articles/dw/1024683.md)
+
 8-6 [从埃菲尔铁塔、凡尔赛宫到塔西提岛：巴黎奥运赛场绵延三万里](/articles/dw/1024684.md)
 
 8-6 [奧運性別爭議：國際拳總記者會被評一片混亂](/articles/dw/1024685.md)
@@ -598,6 +600,4 @@
 7-6 [美国大选：民主党会换下拜登吗？](/articles/dw/1024981.md)
 
 7-6 [2024欧洲杯：球衣争夺战](/articles/dw/1024982.md)
-
-7-6 [印度宗教集会踩踏事故造成逾百人死亡](/articles/dw/1024983.md)
 
