--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-6 [法兰克福机场周一夜间停电数小时](/articles/dw/1024681.md)
+
+8-6 [印度尼西亚 中美夹缝里的下一个超级大国?](/articles/dw/1024682.md)
+
 8-6 [法国警方消息人士：大皇宫等40家博物馆遭勒索软件攻击](/articles/dw/1024683.md)
 
 8-6 [从埃菲尔铁塔、凡尔赛宫到塔西提岛：巴黎奥运赛场绵延三万里](/articles/dw/1024684.md)
@@ -596,8 +600,4 @@
 7-6 [奥尔班闪电访普京 欧盟大怒](/articles/dw/1024979.md)
 
 7-6 [对中国产电车征税 欧盟解释为什么](/articles/dw/1024980.md)
-
-7-6 [美国大选：民主党会换下拜登吗？](/articles/dw/1024981.md)
-
-7-6 [2024欧洲杯：球衣争夺战](/articles/dw/1024982.md)
 
