--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-6 [她认为自己的统治牢不可破，孟加拉人民证明并非如此](/articles/nyt/1042505.md)
+
 8-6 [关于英国各地爆发的暴力骚乱，目前我们所知的](/articles/nyt/1042506.md)
 
 8-6 [对美国经济放缓担忧加剧，全球股市大崩盘](/articles/nyt/1042507.md)
@@ -598,6 +600,4 @@
 5-6 [“我爱妈祖，妈祖爱我”：台湾年轻人拥抱古老神灵](/articles/nyt/1042803.md)
 
 5-6 [为什么说美国退出《中程导弹条约》或令台湾受益](/articles/nyt/1042804.md)
-
-5-6 [习近平五年来首次访问欧洲，寻找战略机遇](/articles/nyt/1042805.md)
 
