--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-6 [中国发射首批卫星 寻求建立中国版“星链“](/articles/dw/1024676.md)
+
 8-6 [著名经济学家：对俄制裁收效甚微](/articles/dw/1024677.md)
 
 8-6 [逃兵数量激增  乌军队：自愿返回就既往不咎](/articles/dw/1024678.md)
@@ -598,6 +600,4 @@
 7-7 [恢复财产税？研究称停征财产税令德国损失3800亿欧元](/articles/dw/1024974.md)
 
 7-7 [越南：身材矮小没学上？](/articles/dw/1024975.md)
-
-7-7 [2024欧洲杯: 德国队粉色球衣评价两极](/articles/dw/1024976.md)
 
