--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-6 [快讯：哈里斯挑选明尼苏达州长瓦尔兹为竞选伙伴，强力寻求中西部选民支持](/articles/voa/1013541.md)
+
 8-6 [美军驻伊拉克基地遭火箭弹袭击，多名美军人员受伤](/articles/voa/1013542.md)
 
 8-6 [路透：中国企业囤积三星高端芯片 因应美国将出台新规](/articles/voa/1013543.md)
@@ -598,6 +600,4 @@
 7-25 [网络安全公司CrowdStrike：技术漏洞让坏数据漏网，导致全球技术停摆](/articles/voa/1013839.md)
 
 7-25 [“给我们工具，我们会完成任务” ：内塔尼亚胡在国会演讲中敦促美国加快对以色列的援助](/articles/voa/1013840.md)
-
-7-25 [巴以人士对中国促成的哈马斯-法塔赫和解协议提出质疑](/articles/voa/1013841.md)
 
