--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-6 [中国大部分地区遭遇热浪袭击，超大城市电网超负荷运转](/articles/voa/1013538.md)
+
+8-6 [关于哈里斯的竞选搭档沃尔兹州长，你应该知道的几件事](/articles/voa/1013539.md)
+
+8-6 [台湾股市止跌回升，台积电周二收盘上扬8%](/articles/voa/1013540.md)
+
 8-6 [快讯：哈里斯挑选明尼苏达州长瓦尔兹为竞选伙伴，强力寻求中西部选民支持](/articles/voa/1013541.md)
 
 8-6 [美军驻伊拉克基地遭火箭弹袭击，多名美军人员受伤](/articles/voa/1013542.md)
@@ -594,10 +600,4 @@
 7-25 [美国：巴基斯坦的政治稳定对于其经济发展至关重要](/articles/voa/1013836.md)
 
 7-25 [东盟外长会对南中国海冲突及美中对立感到棘手？](/articles/voa/1013837.md)
-
-7-25 [美国制裁中国境内一个帮助朝鲜弹道导弹与太空项目采购物品的网络](/articles/voa/1013838.md)
-
-7-25 [网络安全公司CrowdStrike：技术漏洞让坏数据漏网，导致全球技术停摆](/articles/voa/1013839.md)
-
-7-25 [“给我们工具，我们会完成任务” ：内塔尼亚胡在国会演讲中敦促美国加快对以色列的援助](/articles/voa/1013840.md)
 
