--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-7 [中国有样学样搞“星链”，“千帆星座”首发成功，18颗卫星进入轨道](/articles/voa/1013537.md)
+
 8-6 [中国大部分地区遭遇热浪袭击，超大城市电网超负荷运转](/articles/voa/1013538.md)
 
 8-6 [关于哈里斯的竞选搭档沃尔兹州长，你应该知道的几件事](/articles/voa/1013539.md)
@@ -598,6 +600,4 @@
 7-25 [法国当局挫败了几起针对巴黎奥运会的阴谋](/articles/voa/1013835.md)
 
 7-25 [美国：巴基斯坦的政治稳定对于其经济发展至关重要](/articles/voa/1013836.md)
-
-7-25 [东盟外长会对南中国海冲突及美中对立感到棘手？](/articles/voa/1013837.md)
 
