--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-7 [白宫：中国将加强芬太尼化学品的管理](/articles/voa/1013532.md)
+
 8-7 [大脱钩时代中国旅欧学生学者遭两面夹击](/articles/voa/1013533.md)
 
 8-7 [路透专家调查：中国七月份出口增速可能进一步加快](/articles/voa/1013534.md)
@@ -598,6 +600,4 @@
 7-25 [“把火炬传给新一代”：拜登在白宫发表讲话，解释退选原因](/articles/voa/1013830.md)
 
 7-25 [拜登与内塔尼亚胡星期四会晤后，国务卿布林肯将启程前往亚洲](/articles/voa/1013831.md)
-
-7-25 [以色列抗议者对内塔尼亚胡国会讲话表示失望和愤怒](/articles/voa/1013832.md)
 
