--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-7 [VOA独家: 维吾尔活动人士称前商业伙伴在新疆被判刑](/articles/voa/1013527.md)
+
+8-7 [会对华友好还是强硬？哈里斯副手的在华工作经历引起中国社媒讨论](/articles/voa/1013528.md)
+
 8-7 [华裔学者王书君因向中国提供异见人士情报而被判有罪](/articles/voa/1013529.md)
 
 8-7 [分析人士如何看待哈里斯的竞选搭档沃尔兹？](/articles/voa/1013530.md)
@@ -596,8 +600,4 @@
 7-25 [中国央行再次意外下调借贷利率](/articles/voa/1013825.md)
 
 7-25 [台风“格美”袭击台湾酿2死、1货轮沉没 正朝中国福建移动](/articles/voa/1013826.md)
-
-7-25 [专家解析拜登退选讲话：捍卫民主、警告特朗普、定义自己的政治遗产](/articles/voa/1013827.md)
-
-7-25 [名单盘点：哈里斯的竞选搭档会是谁？](/articles/voa/1013828.md)
 
