--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+8-7 [当巴黎一间小小中餐馆内挤满乒乓球奥运冠军](/articles/nyt/1042503.md)
+
+8-7 [明尼苏达州州长沃尔兹成为贺锦丽竞选搭档](/articles/nyt/1042504.md)
+
 8-6 [她认为自己的统治牢不可破，孟加拉人民证明并非如此](/articles/nyt/1042505.md)
 
 8-6 [关于英国各地爆发的暴力骚乱，目前我们所知的](/articles/nyt/1042506.md)
@@ -596,8 +600,4 @@
 5-7 [在由男性统治的中国，“过一种女性主义的生活”](/articles/nyt/1042801.md)
 
 5-7 [中国电动汽车推陈出新，欧美老牌车企面临挑战](/articles/nyt/1042802.md)
-
-5-6 [“我爱妈祖，妈祖爱我”：台湾年轻人拥抱古老神灵](/articles/nyt/1042803.md)
-
-5-6 [为什么说美国退出《中程导弹条约》或令台湾受益](/articles/nyt/1042804.md)
 
