--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-7 [美澳会谈聚焦中国“胁迫行为”](/articles/voa/1013523.md)
+
+8-7 [诺贝尔奖获得者穆罕默德·尤努斯据称将领导孟加拉国临时政府](/articles/voa/1013524.md)
+
 8-7 [伊朗杀害美国官员和政治人物的阴谋与一名巴基斯坦男子有关](/articles/voa/1013525.md)
 
 8-7 [真主党警告以色列：“我们的回应即将到来”](/articles/voa/1013526.md)
@@ -596,8 +600,4 @@
 7-25 [美国众院成立特别工作组 调查特朗普集会枪击事件](/articles/voa/1013821.md)
 
 7-25 [北美防空司令部战机升空 在阿拉斯加外海拦截中俄轰炸机](/articles/voa/1013822.md)
-
-7-25 [美国经济增长在第二季度有所加快，通胀有所缓解](/articles/voa/1013823.md)
-
-7-25 [香港法院判黎智英三项国安控罪表面证据成立](/articles/voa/1013824.md)
 
