--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,20 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-7 [读宋史的赵大胖｜这些年读历史，感悟到的一些大实话](/articles/cdt/338206.md)
+
+8-7 [岭南酷儿Lingnan queer｜中国人对同性恋接纳度仅20%，低于刑满释放、艾滋病、乞讨者](/articles/cdt/338211.md)
+
+8-7 [大河报｜独家 | 唐山烧烤店打人案被判刑民警：领导当时让我照稿念……亲述未当场抓陈继志原因](/articles/cdt/338213.md)
+
+8-7 [【404文库】法度Law｜唐山通报后，实名举报的原警察再次发声](/articles/cdt/338214.md)
+
+8-7 [【404媒体】“她们本不该成为被牺牲的那部分，没有人理应成为被牺牲的那部分”(外二篇）](/articles/cdt/338221.md)
+
+8-7 [【404文库】辛庄课堂｜刘瑜：委内瑞拉这个国家是如何毁掉的？](/articles/cdt/338241.md)
+
+8-7 [建设性意见｜山东省属事业单位收回编制，步子可以迈得再大一点](/articles/cdt/338243.md)
+
 8-5 [每日一语 2024.8.5](/articles/cdt/338252.md)
 
 8-5 [码头水鬼 | 泡在洪水里看奥运](/articles/cdt/338258.md)
@@ -586,18 +600,4 @@
 6-29 [【404文库】黑噪音｜中国会成为人工智能的孤岛吗？](/articles/cdt/339291.md)
 
 6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339292.md)
-
-6-29 [城市的地得｜如实讲述胡女士的事迹，才是对她最好的纪念](/articles/cdt/339293.md)
-
-6-29 [【网络民议】日本驻华大使馆悼念胡友平女士，网友：愿胡女士安息，愿中日和平友好](/articles/cdt/339294.md)
-
-6-27 [三辉图书｜紧急状态志事](/articles/cdt/339305.md)
-
-6-27 [木蹊说｜李雪琴被曝高考买分，谁才是真老虎？](/articles/cdt/339307.md)
-
-6-27 [竹不倒｜把电瓶车砸掉也不给你没收，是一种什么样的声音？](/articles/cdt/339309.md)
-
-6-27 [剑客写字的地方｜带孩子跑外卖3岁女儿被抱走，静悄悄！人间失格有谁懂？](/articles/cdt/339311.md)
-
-6-27 [城市的地得｜善良而勇敢的人，不该如此孤立](/articles/cdt/339313.md)
 
