--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-7 [英国骚乱：三名香港政庇申请者向港人组织求助 学者呼吁注意讯息真伪](/articles/voa/1013522.md)
+
 8-7 [美澳会谈聚焦中国“胁迫行为”](/articles/voa/1013523.md)
 
 8-7 [诺贝尔奖获得者穆罕默德·尤努斯据称将领导孟加拉国临时政府](/articles/voa/1013524.md)
@@ -598,6 +600,4 @@
 7-25 [国事光析： 三中全会的“李鬼式改革”](/articles/voa/1013820.md)
 
 7-25 [美国众院成立特别工作组 调查特朗普集会枪击事件](/articles/voa/1013821.md)
-
-7-25 [北美防空司令部战机升空 在阿拉斯加外海拦截中俄轰炸机](/articles/voa/1013822.md)
 
