--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+8-7 [哈马斯新任政治“头号人物”是谁？](/articles/nyt/1042500.md)
+
+8-7 [关于贺锦丽搭档沃尔兹的19个事实：1989年曾在中国教书](/articles/nyt/1042501.md)
+
 8-7 [“说错话”被禁言？胡锡进微博停更之谜](/articles/nyt/1042502.md)
 
 8-7 [当巴黎一间小小中餐馆内挤满乒乓球奥运冠军](/articles/nyt/1042503.md)
@@ -596,8 +600,4 @@
 5-7 [《纽约时报》获国际报道奖等三项普利策奖](/articles/nyt/1042798.md)
 
 5-7 [习近平强硬回应批评，称反对利用乌克兰危机煽动新冷战](/articles/nyt/1042799.md)
-
-5-7 [关于习近平欧洲行，你应该知道的](/articles/nyt/1042800.md)
-
-5-7 [在由男性统治的中国，“过一种女性主义的生活”](/articles/nyt/1042801.md)
 
