--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-7 [现实的模样｜网络举报，成了这世道的“救命稻草”](/articles/cdt/338202.md)
+
 8-7 [读宋史的赵大胖｜这些年读历史，感悟到的一些大实话](/articles/cdt/338206.md)
 
 8-7 [岭南酷儿Lingnan queer｜中国人对同性恋接纳度仅20%，低于刑满释放、艾滋病、乞讨者](/articles/cdt/338211.md)
@@ -12,6 +14,8 @@
 8-7 [【404文库】法度Law｜唐山通报后，实名举报的原警察再次发声](/articles/cdt/338214.md)
 
 8-7 [【404媒体】“她们本不该成为被牺牲的那部分，没有人理应成为被牺牲的那部分”(外二篇）](/articles/cdt/338221.md)
+
+8-7 [【404文库】知灼｜唐山打人事件原出警民警实名举报自己遭强行定罪 ：官方连夜公布调查结论](/articles/cdt/338225.md)
 
 8-7 [【404文库】辛庄课堂｜刘瑜：委内瑞拉这个国家是如何毁掉的？](/articles/cdt/338241.md)
 
@@ -596,8 +600,4 @@
 6-29 [每日一语 2024.6.29](/articles/cdt/339284.md)
 
 6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339287.md)
-
-6-29 [【404文库】黑噪音｜中国会成为人工智能的孤岛吗？](/articles/cdt/339291.md)
-
-6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339292.md)
 
