--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-7 [向许家印等人追讨60亿美元后 恒大清盘人再起诉普华永道](/articles/dw/1024662.md)
+
+8-7 [哈马斯任命辛瓦尔为其新领导人](/articles/dw/1024663.md)
+
+8-7 [孟加拉国临时领导人：诺贝尔和平奖得主尤努斯](/articles/dw/1024664.md)
+
 8-7 [国泰航空宣布购买至少30架空客A330-900飞机](/articles/dw/1024665.md)
 
 8-7 [“咖喱香肠”为何能成为德国国民小吃？](/articles/dw/1024666.md)
@@ -594,10 +600,4 @@
 7-8 [匈牙利總理突訪華  習近平呼籲大國應發揮正能量](/articles/dw/1024960.md)
 
 7-8 [选战团队准备好问题 拜登媒体采访引争议](/articles/dw/1024961.md)
-
-7-8 [法國議會選舉意外翻盤 左翼聯盟力壓極右派](/articles/dw/1024962.md)
-
-7-8 [匈牙利總理歐爾班突訪華會習近平](/articles/dw/1024963.md)
-
-7-8 [欧尔班闪电访普京 欧盟大怒](/articles/dw/1024964.md)
 
