--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-7 [球迷微博上怒怼奥运金牌球员遭刑拘，北京利用奥运整治“饭圈文化”](/articles/voa/1013513.md)
+
+8-7 [乌军越境攻击俄库尔斯克地区，双方展开激战](/articles/voa/1013514.md)
+
 8-7 [部署更多美军之际美国领导层呼吁中东保持冷静](/articles/voa/1013515.md)
 
 8-7 [解放军在“黄岩岛”附近举行海空战巡 菲美加澳同日联合军演](/articles/voa/1013516.md)
@@ -596,8 +600,4 @@
 7-26 [西方制裁导致中俄贸易结算困难，迫使两国转用数字贸易平台](/articles/voa/1013811.md)
 
 7-26 [中国政府刺激经济新举措 发3000亿国债支持消费品以旧换新](/articles/voa/1013812.md)
-
-7-26 [特朗普针对中国的关税与加密货币政策获硅谷商人支持](/articles/voa/1013813.md)
-
-7-26 [三罪表证成立11月再讯 黎智英将出庭自辩](/articles/voa/1013814.md)
 
