--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-8 [老牌恶棍｜如何看待网络举报？我的建议是直接申遗](/articles/cdt/338199.md)
+
 8-7 [现实的模样｜网络举报，成了这世道的“救命稻草”](/articles/cdt/338202.md)
 
 8-7 [读宋史的赵大胖｜这些年读历史，感悟到的一些大实话](/articles/cdt/338206.md)
@@ -598,6 +600,4 @@
 6-30 [【CDT月度视频】六月之声(2024)——向《四月之声》致敬](/articles/cdt/339283.md)
 
 6-29 [每日一语 2024.6.29](/articles/cdt/339284.md)
-
-6-29 [往事与随想｜以真实的人抵抗虚妄的仇恨](/articles/cdt/339287.md)
 
