--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-8 [贺锦丽想从“中西部老爹”沃尔兹身上获得什么](/articles/nyt/1042497.md)
+
 8-8 [全球股市剧烈震荡背后的原因是什么？](/articles/nyt/1042498.md)
 
 8-8 [iPhone为何中国制造？](/articles/nyt/1042499.md)
@@ -598,6 +600,4 @@
 5-8 [TikTok起诉美国政府，要求推翻强制出售法案](/articles/nyt/1042795.md)
 
 5-8 [在愈发对中国不满的东欧，习近平将访问两个友好国家](/articles/nyt/1042796.md)
-
-5-7 [云南一家医院发生持刀袭击事件，致至少两死21伤](/articles/nyt/1042797.md)
 
