--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-8 [路透社：俄罗斯和中国首次易货贸易或在今秋进行](/articles/voa/1013493.md)
+
 8-8 [中国呼吁国际机构加强对美国田径运动员的药检频率](/articles/voa/1013494.md)
 
 8-8 [美联社民调：大多数美国人认为今年大选对民主至关重要](/articles/voa/1013495.md)
@@ -598,6 +600,4 @@
 7-26 [王毅称中日关系处于“关键阶段”，日外相要求中国释放日本公民](/articles/voa/1013791.md)
 
 7-26 [巴黎奥运开幕前几小时，法国高铁遭纵火破坏](/articles/voa/1013792.md)
-
-7-26 [南中国海局势升温之际东盟外长与王毅会晤](/articles/voa/1013793.md)
 
