--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 8-8 [衣者朝新｜劳东燕：法律与新闻不可能长期处于低谷](/articles/cdt/338191.md)
 
+8-8 [稻草和飞花｜哈西娜的最后几个小时](/articles/cdt/338192.md)
+
 8-8 [每日一语 2024.8.7](/articles/cdt/338194.md)
 
 8-8 [每日一语 2024.8.6](/articles/cdt/338197.md)
@@ -598,6 +600,4 @@
 6-30 [【404文库】“相比于袭击本身，社会对袭击的看法更让人担忧”（外二篇）](/articles/cdt/339255.md)
 
 6-30 [【404文库】夏星繁｜洒泪祭雄杰：痛悼江苏苏州见义勇为的英雄胡友平女士](/articles/cdt/339267.md)
-
-6-29 [【404文库】i看见｜日本人学校，间谍学校？](/articles/cdt/339271.md)
 
