--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-8 [普京与欧洲：25年的爱恨情仇](/articles/dw/1024658.md)
+
 8-8 [「女拳手」誰說了算？性別檢測的盲點與爭議](/articles/dw/1024659.md)
 
 8-8 [泰國法院解散反對黨：企圖推翻君主立憲制](/articles/dw/1024660.md)
@@ -598,6 +600,4 @@
 7-8 [英國五分之一民眾生活貧困](/articles/dw/1024956.md)
 
 7-8 [日菲签署安全协议 允许军队互入对方领土](/articles/dw/1024957.md)
-
-7-8 [阿斯麦总裁：中美芯片战不应继续升级](/articles/dw/1024958.md)
 
