--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-9 [蒲黄榆说：最后的公知也消失了：中国的数字极权主义还有多近？](/articles/voa/1013470.md)
+
 8-9 [英国对可能发生更多骚乱保持警惕](/articles/voa/1013471.md)
 
 8-9 [特朗普和哈里斯将在美国广播公司举行首次总统辩论](/articles/voa/1013472.md)
@@ -598,6 +600,4 @@
 7-27 [澳大利亚外长呼吁缅甸军政府“走一条不同的道路”](/articles/voa/1013768.md)
 
 7-27 [台风“格美”袭击中国 福建已有近80万人受灾](/articles/voa/1013769.md)
-
-7-27 [韩国队在开幕式被介绍成“朝鲜队” 国际奥委会道歉](/articles/voa/1013770.md)
 
