--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-9 [中国如何在技术领域建立优势？科研进步和巨额投资](/articles/nyt/1042491.md)
+
 8-9 [为何台积电难以在美国复制台湾工厂的成功](/articles/nyt/1042492.md)
 
 8-9 [单身女性生育权之争：中国法院裁定未婚女性无权冻卵](/articles/nyt/1042493.md)
@@ -598,6 +600,4 @@
 5-9 [香港法院批准禁制令，《愿荣光归香港》成禁歌](/articles/nyt/1042789.md)
 
 5-9 [这不是我记忆中那个中国](/articles/nyt/1042790.md)
-
-5-9 [中美将就人工智能使用问题开启“军备控制谈判”](/articles/nyt/1042791.md)
 
