--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+8-9 [盗卖人体尸骨 中国多地殡仪馆涉案](/articles/dw/1024646.md)
+
+8-9 [美国取代中国 成为德国最重要贸易伙伴](/articles/dw/1024647.md)
+
+8-9 [大熊猫重返圣地亚哥动物园](/articles/dw/1024648.md)
+
 8-9 [普京执掌俄罗斯的四分之一个世纪](/articles/dw/1024649.md)
 
 8-9 [客座评论：中国官场的“两面人”与“恨国党”](/articles/dw/1024650.md)
@@ -594,10 +600,4 @@
 7-9 [波音“认罪”次日 又掉“轮”子](/articles/dw/1024944.md)
 
 7-9 [法国右翼领衔“欧洲爱国者联盟”](/articles/dw/1024945.md)
-
-7-9 [日本决心加强与北约及其伙伴的合作](/articles/dw/1024946.md)
-
-7-9 [欧美驻华大使：同中国民间交流为什么这么难？](/articles/dw/1024947.md)
-
-7-9 [北约峰会彰显实力　欧美政局均有挑战](/articles/dw/1024948.md)
 
