--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-9 [菲律宾和越南举行海上联合演习](/articles/dw/1024642.md)
+
 8-9 [从骚乱到”和平之夜“——英国暴力杀人事件后发生了什么？](/articles/dw/1024643.md)
 
 8-9 [参与策划泰勒·斯威夫特恐袭案第三名嫌疑人在维也纳被捕](/articles/dw/1024644.md)
@@ -598,6 +600,4 @@
 7-10 [中国产电动汽车主导以色列市场](/articles/dw/1024940.md)
 
 7-10 [微软给员工发iPhone 办公只能用苹果](/articles/dw/1024941.md)
-
-7-9 [莫迪会晤普京 强调双方是朋友](/articles/dw/1024942.md)
 
