--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-10 [中国电动和混合型车销量七月首超燃油车，突破50%大关](/articles/voa/1013461.md)
+
+8-10 [台积电布局欧美日，因应中国威胁被迫分散风险?](/articles/voa/1013462.md)
+
 8-9 [无法说服欧盟放弃对中国电动车加征关税，北京向世贸组织提起诉讼](/articles/voa/1013463.md)
 
 8-9 [中国宁波舟山港货轮发生爆炸，台湾船主阳明海运已经确认](/articles/voa/1013464.md)
@@ -596,8 +600,4 @@
 7-28 [共产党越管越严 致富之路越走越窄 中国人把矛头对准制度不公和习近平恶政](/articles/voa/1013759.md)
 
 7-28 [加沙官员说，以色列攻击学校至少造成30人死亡](/articles/voa/1013760.md)
-
-7-28 [中国副财长否认产能过剩，耶伦：世界不接受中国独霸全球制造业](/articles/voa/1013761.md)
-
-7-27 [布林肯会晤王毅：台湾问题立场对立，美方关切，中方严厉](/articles/voa/1013762.md)
 
