--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-10 [美学者：美国无法承受失去台湾，但尚未准备好为台湾而战](/articles/voa/1013456.md)
+
 8-10 [美跨党派议员推出议案 谴责北京在南中国海军事挑衅行为](/articles/voa/1013457.md)
 
 8-10 [以色列发动汗尤尼斯攻势，同意恢复加沙停火谈判](/articles/voa/1013458.md)
@@ -598,6 +600,4 @@
 7-28 [为避免中国或他国主导加密货币市场 特朗普誓言建立“国家比特币储备”](/articles/voa/1013754.md)
 
 7-28 [布林肯抵达日本 将举行美日2+2会谈、四方安全会谈](/articles/voa/1013755.md)
-
-7-28 [俄罗斯夺取乌克兰东部的洛祖瓦茨克定居点](/articles/voa/1013756.md)
 
