--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -15,7 +15,7 @@
 
 8-9 [【404文库】财新｜遗体黑市背后：同种异体骨如何用于临床？如何获取？](/articles/cdt/338153.md)
 
-8-9 [燃犀观察室｜直击盗卖骨骼产业链：有人控制四个火化场，盗卖4000余具骨骼](/articles/cdt/338155.md)
+8-9 [【404文库】燃犀观察室｜直击盗卖骨骼产业链：有人控制四个火化场，盗卖4000余具骨骼](/articles/cdt/338155.md)
 
 8-9 [每日一语 2024.8.8](/articles/cdt/338157.md)
 
