--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-10 [在马尔代夫驱逐印度军队后 两国寻求重建关系](/articles/voa/1013442.md)
+
+8-10 [朝鲜不寻求外援 金正恩:1.5万洪水灾民将带到首都照顾](/articles/voa/1013443.md)
+
 8-10 [中国火箭于太空中解体 分析人士称逾千颗卫星面临碰撞危险](/articles/voa/1013444.md)
 
 8-10 [以色列袭击加沙 伊朗称将就暗杀事件惩罚以色列](/articles/voa/1013445.md)
@@ -596,8 +600,4 @@
 7-29 [巴基斯坦与中国进行债务重组谈判](/articles/voa/1013740.md)
 
 7-29 [中国电动车欧美遇挫 在非洲攻无不克](/articles/voa/1013741.md)
-
-7-29 [欧盟人工智能和汽车芯片新政或加剧中欧经贸争端](/articles/voa/1013742.md)
-
-7-29 [乌克兰顿涅茨克地区五人死亡，数十人受伤，俄罗斯称取得进展](/articles/voa/1013743.md)
 
