--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-10 [阿尔及利亚拳击手奥运摘金 再次回应性别争议](/articles/dw/1024639.md)
+
+8-10 [肖尔茨：巴黎激励德国申办奥运会](/articles/dw/1024640.md)
+
 8-10 [巴西客机坠毁 机上61人全部遇难](/articles/dw/1024641.md)
 
 8-9 [菲律宾和越南举行海上联合演习](/articles/dw/1024642.md)
@@ -596,8 +600,4 @@
 7-10 [中国泳队涉禁药事件调查：结果公布仍被质疑](/articles/dw/1024937.md)
 
 7-10 [佩泽希齐扬 - 没有实权的伊朗新总统](/articles/dw/1024938.md)
-
-7-10 [莫迪在莫斯科间接批评战争](/articles/dw/1024939.md)
-
-7-10 [中国产电动汽车主导以色列市场](/articles/dw/1024940.md)
 
