--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-11 [王毅：中国支持伊朗捍卫主权安全和民族尊严](/articles/voa/1013424.md)
+
 8-11 [泽连斯基首度谈论乌军在俄罗斯本土执行战斗任务](/articles/voa/1013425.md)
 
 8-11 [中国结婚登记再创新低 分析:性别不平等压抑成婚意愿](/articles/voa/1013426.md)
@@ -598,6 +600,4 @@
 7-30 [国会通过法案，要求联邦政府必须采购完全在美国制造的美国国旗](/articles/voa/1013722.md)
 
 7-30 [印度考虑放宽对华投资限制以提高出口水平引起激烈争论](/articles/voa/1013723.md)
-
-7-30 [意大利总理梅洛尼会晤习近平，呼吁建立平衡的欧中关系](/articles/voa/1013724.md)
 
