--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [【CDT报告汇】《美中科技合作协定》即将失效，黄亚生强调两国科技交流不能停（外二篇）](/articles/cdt/338075.md)
+
 8-12 [每日一语 2024.8.11](/articles/cdt/338079.md)
 
 8-12 [【404文库】阿罗汉不约｜关于倒卖尸体，补充一些其他角度](/articles/cdt/338081.md)
@@ -598,6 +600,4 @@
 7-4 [衣者褚｜从孩子们的嘴里夺食，罪大恶极](/articles/cdt/339157.md)
 
 7-4 [风慢慢｜美军偷叙利亚小麦这个新闻，戳中了我的笑点](/articles/cdt/339159.md)
-
-7-4 [每日一语 2024.7.3](/articles/cdt/339162.md)
 
