--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-12 [体育如何避开政治的刀光剑影？奥林匹克永恒的难题](/articles/nyt/1042487.md)
+
 8-12 [美国寻求加强对华芯片限制，但需要先说服盟友和科技行业](/articles/nyt/1042488.md)
 
 8-12 [中国体育的“举国体制”改变了吗？](/articles/nyt/1042489.md)
@@ -598,6 +600,4 @@
 5-10 [中国主导全球清洁能源市场，这对拜登来说是一个问题](/articles/nyt/1042785.md)
 
 5-9 [“朝鲜戈培尔”去世，为金氏三代领导人打造极权宣传](/articles/nyt/1042786.md)
-
-5-9 [拜登承诺采取措施应对新一轮中国进口激增](/articles/nyt/1042787.md)
 
