--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-12 [香港终审法院驳回黎智英等七人非法集会案的上诉](/articles/voa/1013413.md)
+
+8-12 [美韩下周将举行年度联合军演 应对朝鲜与日俱增的威胁](/articles/voa/1013414.md)
+
 8-12 [中国债券市场因央行与国债牛市对抗而动荡](/articles/voa/1013415.md)
 
 8-12 [美防长公开宣布向中东派遣潜艇 并要求航母打击群加速前往](/articles/voa/1013416.md)
@@ -596,8 +600,4 @@
 7-30 [王书君案审判开始,被告涉嫌为中国政府在美国监视反共活动人士](/articles/voa/1013711.md)
 
 7-30 [委内瑞拉的马杜罗宣称胜选，美国和其他国家质疑合法性](/articles/voa/1013712.md)
-
-7-30 [运动员抱怨食品和交通后,巴黎奥运会主办方解决后勤问题](/articles/voa/1013713.md)
-
-7-30 [美报告：美国国防战略“过时”不能应对中俄威胁，亟需“战斗号令”](/articles/voa/1013714.md)
 
