--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-12 [“萝卜快跑“了，网约车出租车还能跑起来？](/articles/dw/1024616.md)
+
 8-12 [客座评论：是为了官方利益还是真正的户籍制度改革？](/articles/dw/1024617.md)
 
 8-12 [2024年巴黎奥运会：闭幕式的精彩瞬间](/articles/dw/1024618.md)
@@ -598,6 +600,4 @@
 7-13 [台湾罕见公布中国火箭军在内蒙古试射](/articles/dw/1024914.md)
 
 7-13 [中国能否超越美国成为第一经济大国？](/articles/dw/1024915.md)
-
-7-12 [德语媒体：禁用华为5G是否明智？](/articles/dw/1024916.md)
 
