--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [涵子君｜量不足5000亿，外国投资者撤出创纪录？](/articles/cdt/338062.md)
+
+8-12 [新新默存｜在中国，让乒乓球成为正常的体育运动有多难？](/articles/cdt/338065.md)
+
+8-12 [真实故事计划｜缺钱本科生，扎堆工厂流水线](/articles/cdt/338068.md)
+
 8-12 [亮见｜马翔宇哭了，他虽败犹荣](/articles/cdt/338071.md)
 
 8-12 [【CDT报告汇】《美中科技合作协定》即将失效，黄亚生强调两国科技交流不能停（外二篇）](/articles/cdt/338075.md)
@@ -594,10 +600,4 @@
 7-5 [【立此存照】国家电影局｜影片赴境外参加电影节（展）前须履行备案](/articles/cdt/339149.md)
 
 7-5 [三联生活周刊｜几十万套法拍房背后：那些还不上贷款的普通人](/articles/cdt/339151.md)
-
-7-4 [【404文库】大象公社｜2014~2024，仅仅10年](/articles/cdt/339153.md)
-
-7-4 [秦朔朋友圈｜越发展，越需要外资外企和外国人](/articles/cdt/339155.md)
-
-7-4 [衣者褚｜从孩子们的嘴里夺食，罪大恶极](/articles/cdt/339157.md)
 
