--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-12 [俄乌战况：扎波罗热核电站失火 俄乌双方相互指责](/articles/dw/1024615.md)
+
 8-12 [“萝卜快跑“了，网约车出租车还能跑起来？](/articles/dw/1024616.md)
 
 8-12 [客座评论：是为了官方利益还是真正的户籍制度改革？](/articles/dw/1024617.md)
@@ -598,6 +600,4 @@
 7-13 [电动汽车临时关税 德国可能投弃权票](/articles/dw/1024913.md)
 
 7-13 [台湾罕见公布中国火箭军在内蒙古试射](/articles/dw/1024914.md)
-
-7-13 [中国能否超越美国成为第一经济大国？](/articles/dw/1024915.md)
 
