--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+8-12 [专访：兴奋剂问题遍全球 但中国更具系统性](/articles/dw/1024613.md)
+
+8-12 [宁波港船只猛烈爆炸  集装箱瞬间变火球](/articles/dw/1024614.md)
+
 8-12 [俄乌战况：扎波罗热核电站失火 俄乌双方相互指责](/articles/dw/1024615.md)
 
 8-12 [“萝卜快跑“了，网约车出租车还能跑起来？](/articles/dw/1024616.md)
@@ -596,8 +600,4 @@
 7-13 [门票近一百美元 白金汉宫阳台首度对公众开放](/articles/dw/1024911.md)
 
 7-13 [中国强烈反对美国涉藏法案 誓言捍卫自身利益](/articles/dw/1024912.md)
-
-7-13 [电动汽车临时关税 德国可能投弃权票](/articles/dw/1024913.md)
-
-7-13 [台湾罕见公布中国火箭军在内蒙古试射](/articles/dw/1024914.md)
 
