--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [老牌恶棍｜奥运会结束了，谁该破防？](/articles/cdt/338060.md)
+
 8-12 [涵子君｜量不足5000亿，外国投资者撤出创纪录？](/articles/cdt/338062.md)
 
 8-12 [新新默存｜在中国，让乒乓球成为正常的体育运动有多难？](/articles/cdt/338065.md)
@@ -598,6 +600,4 @@
 7-5 [三十六楼｜突发，碧桂园清零](/articles/cdt/339147.md)
 
 7-5 [【立此存照】国家电影局｜影片赴境外参加电影节（展）前须履行备案](/articles/cdt/339149.md)
-
-7-5 [三联生活周刊｜几十万套法拍房背后：那些还不上贷款的普通人](/articles/cdt/339151.md)
 
