--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+8-12 [Renmine说｜前车之鉴：韩国网络实名制](/articles/cdt/338054.md)
+
+8-12 [码头水鬼｜火葬场卖尸体有什么大惊小怪的？器官都可以随便卖……](/articles/cdt/338056.md)
+
+8-12 [知识分子｜中国人到底能健康工作多少年？](/articles/cdt/338058.md)
+
 8-12 [老牌恶棍｜奥运会结束了，谁该破防？](/articles/cdt/338060.md)
 
 8-12 [涵子君｜量不足5000亿，外国投资者撤出创纪录？](/articles/cdt/338062.md)
@@ -594,10 +600,4 @@
 7-5 [原点original｜洪峰过境“鱼米之乡”，湖南平江72小时洪灾纪实](/articles/cdt/339141.md)
 
 7-5 [维舟｜当长期信心被摧毁](/articles/cdt/339143.md)
-
-7-5 [每日一语 2024.7.4](/articles/cdt/339145.md)
-
-7-5 [三十六楼｜突发，碧桂园清零](/articles/cdt/339147.md)
-
-7-5 [【立此存照】国家电影局｜影片赴境外参加电影节（展）前须履行备案](/articles/cdt/339149.md)
 
