--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-12 [德法英三国领导人发表声明紧急呼吁加沙停火释放人质](/articles/voa/1013404.md)
+
+8-12 [台湾因驻澳门人员被要求签“一中”承诺书无法赴任而考虑关闭驻澳门办事处](/articles/voa/1013405.md)
+
+8-12 [香港首名国安犯唐英杰公开忏悔， “电视认罪”手法延伸到香港](/articles/voa/1013406.md)
+
 8-12 [奥运夺牌选手却被嘘，专家:中国以政治凌驾体育](/articles/voa/1013407.md)
 
 8-12 [路透：越共总书记苏林刚上任首次外访就奔北京](/articles/voa/1013408.md)
@@ -594,10 +600,4 @@
 7-30 [梅洛尼：希望消除意大利产品进入中国的障碍](/articles/voa/1013702.md)
 
 7-30 [台湾总统赖清德警告中国“威胁”推动国防自主](/articles/voa/1013703.md)
-
-7-30 [中共政治局会议 承诺刺激政策将侧重消费者](/articles/voa/1013704.md)
-
-7-30 [台湾与中国就“0214金门事件”达成协议 争议事件落幕](/articles/voa/1013705.md)
-
-7-30 [印度南部暴雨导致 大规模山体滑坡酿至少49死](/articles/voa/1013706.md)
 
