--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+8-13 [拒绝“数字牢笼”，加州民运人士抗议“网络身份证”](/articles/voa/1013400.md)
+
 8-13 [欧佩克削减2024年石油需求增长预测，中国经济不佳是一大主因](/articles/voa/1013401.md)
 
 8-13 [基里巴斯大选本周拉开帷幕，马茂政府亲中政策面临民意检验](/articles/voa/1013402.md)
@@ -598,6 +600,4 @@
 7-31 [美国政府延期加征对华关税，耶伦:中国过剩产能伤害所有国家](/articles/voa/1013698.md)
 
 7-31 [无惧中国威胁，“对华政策跨国议会联盟”年会移师台北，并接纳台湾入会](/articles/voa/1013699.md)
-
-7-30 [回应埃尔多安武装入侵以色列的威胁，以色列外长敦促北约开除土耳其](/articles/voa/1013700.md)
 
