--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+8-13 [台湾民众党陷假帐风波，承认漏报政治献金新台币1800万](/articles/voa/1013394.md)
+
+8-13 [普京：乌克兰攻入俄罗斯库尔斯克州是转移注意力的策略](/articles/voa/1013395.md)
+
 8-13 [美中金融工作组本周将于上海举行会谈](/articles/voa/1013396.md)
 
 8-13 [美国将恢复向沙特阿拉伯出售进攻型武器](/articles/voa/1013397.md)
@@ -596,8 +600,4 @@
 7-31 [中国网民借委内瑞拉街头抗议委婉批评北京政治体制](/articles/voa/1013692.md)
 
 7-31 [马杜罗在委内瑞拉国内外质疑与抗议声中宣布胜选，习近平祝贺其连任](/articles/voa/1013693.md)
-
-7-31 [默克公司加德西疫苗在中国的销售担忧让默克股票暴跌](/articles/voa/1013694.md)
-
-7-31 [世界媒体看中国: 与意大利的特殊关系](/articles/voa/1013695.md)
 
