--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+8-13 [美国：日内瓦苏丹谈判将举行，没有苏丹军方参与也行](/articles/voa/1013388.md)
+
+8-13 [前康奈尔大学学生因向犹太学生发布威胁被判监禁21个月](/articles/voa/1013389.md)
+
+8-13 [白宫警告说，伊朗可能即将对以色列发动袭击](/articles/voa/1013390.md)
+
 8-13 [中国官网设惩治台独专栏，学者称其如“钓鱼”网站：“有用的白痴”或自愿上钩](/articles/voa/1013391.md)
 
 8-13 [美国对伊朗据报计划向俄罗斯运送数百枚弹道导弹一事深感关切](/articles/voa/1013392.md)
@@ -594,10 +600,4 @@
 7-31 [美议员指责国际奥委会和世界反兴奋剂机构“敲诈勒索”，并针锋相对推出新法案](/articles/voa/1013686.md)
 
 7-31 [联合国：拉法供水设施被毁增加了加沙健康风险](/articles/voa/1013687.md)
-
-7-31 [代理局长：特勤局未能防止特朗普险遭刺杀事件，其失败无法辩护](/articles/voa/1013688.md)
-
-7-31 [美参议院通过重大儿童在线安全改革法案](/articles/voa/1013689.md)
-
-7-31 [西蒙·拜尔斯和美国队夺得女子体操金牌](/articles/voa/1013690.md)
 
