--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+8-13 [美国高级官员将访华进行经贸谈判](/articles/nyt/1042486.md)
+
 8-12 [体育如何避开政治的刀光剑影？奥林匹克永恒的难题](/articles/nyt/1042487.md)
 
 8-12 [美国寻求加强对华芯片限制，但需要先说服盟友和科技行业](/articles/nyt/1042488.md)
@@ -598,6 +600,4 @@
 5-10 [习近平访问布达佩斯，中匈建立“全天候全面战略伙伴关系”](/articles/nyt/1042784.md)
 
 5-10 [中国主导全球清洁能源市场，这对拜登来说是一个问题](/articles/nyt/1042785.md)
-
-5-9 [“朝鲜戈培尔”去世，为金氏三代领导人打造极权宣传](/articles/nyt/1042786.md)
 
