--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+8-13 [巴黎奥运的特别时刻](/articles/dw/1024609.md)
+
 8-13 [戰火一觸即發？美稱伊朗恐本週襲擊以色列](/articles/dw/1024610.md)
 
 8-12 [黎志英案 香港终审法院驳回上诉](/articles/dw/1024611.md)
@@ -598,6 +600,4 @@
 7-14 [德国海上风机中国造   会带来安全隐患吗？](/articles/dw/1024907.md)
 
 7-13 [朝鲜谴责称北约峰会《华盛顿宣言》“非法”](/articles/dw/1024908.md)
-
-7-13 [欧盟称X违法 马斯克曝光欧盟提供“秘密交易”](/articles/dw/1024909.md)
 
